les mysteres des lettres grecques

--- a/coptic/wip/les_mysteres_des_lettres_grecques.html
+++ b/coptic/wip/les_mysteres_des_lettres_grecques.html
@@ -11,7 +11,13 @@
 				font-size: 16px;
 				//line-height: 1;
 			}
-			#source_coptic p {
+			
+			h3 {
+				font-weight: normal;
+			}
+			
+			#source_coptic p,
+			#source_coptic h3 {
 				font-family: "Noto Sans Coptic";
 				color: hsl(147, 50%, 47%);
 				color: hsl(197, 45%, 57%)
@@ -28,7 +34,17 @@
 			<p>[ⲁ]ⲥϣⲱⲡⲉ ⲇⲉ ⲙ̄ⲙⲟⲓ ⲛ̄[ⲟⲩ]?ⲟⲩⲟⲉⲓϣ, ⲡⲉϫⲁϥ, ⲉⲓ[ⲡⲣⲟ]ⲥⲕⲁⲣⲧⲏⲣⲉⲓ ⲉⲧⲉ[ⲥⲩⲭⲁⲓ ⲙ̄]ⲡⲛⲟⲩⲧⲉ ϩⲓⲡϫⲁⲓⲉ. ϩⲛ̄ⲟ[ⲩϩⲟ]ⲟⲩ ⲇⲉ ⲁⲓϫⲓ ϩⲛ̄ⲛⲁϭⲓϫ ⲙ̄ⲡϫⲱⲱⲙⲉ ⲛ̄ⲧⲁⲡⲟⲕⲁⲗⲩⲙⲯⲓⲥ ⲛ̄ⲧⲁϥⲛⲁⲩ ⲉⲣⲟⲥ ϩⲙ̄ⲡⲁⲧⲙⲟⲥ ⲛ̄ϭⲓⲡⲙⲁⲕⲁⲣⲓⲟⲥ ⲓⲱⲁⲛⲛⲏⲥ ⲡⲑⲉⲟⲗⲟⲅⲟⲥ, ⲁⲩⲱ ⲛⲉⲓⲱϣ ⲛ̄ϩⲏⲧⲥ̄ ⲡⲉ ϣⲁⲛⲧⲁⲉⲓ ⲉϫⲙ̄ⲡⲙⲁ ⲉⲛⲉϥϫⲱ ⲙ̄ⲙⲟⲥ ⲛ̄ⲓⲱϩⲁⲛⲛⲏⲥ ⲛ̄ϭⲓⲡⲉⲭⲣⲏⲥⲧⲟⲥ, ϫⲉ “ⲁⲛⲟⲕ ⲁⲗⲫⲁ ⲁⲩⲱ ⲱ,” ⲁⲩⲱ ⲡⲁⲗⲓⲛ ϣⲁⲡⲙⲉϩⲥⲛⲁⲩ ⲙⲛ̄ⲡⲙⲉϩϣⲟⲙⲛⲧ ⲛ̄ⲥⲟⲡ ⲉϥϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ “ⲁⲛⲟⲕ ⲁⲓϣⲱⲡⲉ ⲛ̄ⲁⲗⲫⲁ ⲁⲩⲱ ⲱ.” ⲛⲁⲓ ⲟⲩⲛ ⲉⲓⲥⲱⲧⲙ ⲉ(-ⲇ̅-)ⲣⲟⲟⲩ, ⲁⲓⲉⲓⲙⲉ ϩⲙ̄ⲡⲁϩⲏⲧ ⲧⲁⲭⲩ ⲉⲡⲓⲕⲉϣⲁϫⲉ ⲉⲧⲙ̄ⲙⲁⲩ ⲛ̄ⲉⲩⲁⲅⲅⲉⲗⲓⲟⲛ ⲛ̄ⲧⲉⲡϫⲟⲉⲓⲥ ϥϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ “ⲟⲩ[ⲓⲱ]ⲧⲁ ⲛ̄ⲟⲩⲱⲧ ⲏ ⲟⲩϣⲱⲗϩ ⲛ̄ⲟⲩⲱⲧ ⲛ̄ⲛⲉⲩⲥⲓⲛⲉ ϣⲁⲛⲧⲉ-ⲛⲁⲓ ⲧⲏⲣⲟⲩ ϣⲱⲡⲉ.”</p>
 			<p>ⲁⲓⲉⲓⲙⲉ ⲧⲁⲭⲏ ϫⲉ ⲟⲩⲙⲩⲥⲧⲏⲣⲓⲟⲛ ⲛ̄ⲧⲉⲡⲛⲟⲩⲧⲉ ⲡⲉⲧϣⲟⲟⲡ ϩⲛ̄ⲛⲉⲥϩⲁⲓ ⲙ̄ⲡⲁⲗⲫⲁⲃⲏⲧⲁ, ⲁⲩⲱ ⲡⲁⲓ ⲉ-ⲛⲉϥϭⲱⲗⲡ ⲉⲣⲟⲛ ⲁⲛ, ⲕⲉⲧⲟⲓ ϩⲛ̄ⲟⲩⲙⲛⲧⲁⲧϩⲏⲧⲥⲛⲁⲩ, ⲁⲓⲡⲓⲥⲧⲉⲩⲉ ⲉⲡⲉⲭ︤ⲥ︥ ⲡⲁⲓ ⲉⲧϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ “ⲁⲓⲧⲉⲓ ⲧⲁⲣⲟⲩϯ ⲛⲏⲧⲛ̄, ϣⲓⲛⲉ ⲧⲁ ⲧⲁⲣⲉⲧⲉⲧⲛ̄ϭⲓⲛⲉ, ⲧⲱϩⲙ ⲧⲁⲣⲟⲩⲟⲩⲱⲛ ⲛⲏⲧⲛ̄, ⲟⲩⲟⲛ ⲅⲁⲣ ⲛⲓⲙ ⲉⲧⲁⲓⲧⲉⲓ ϥⲛⲁϫⲓ, ⲁⲩⲱ ⲡⲉⲧϣⲓⲛⲉ ⲉϥⲛⲁϭⲓⲛⲉ, ⲁⲩⲱ ⲡⲉⲧⲧⲱϩⲙ ⲥⲉⲛⲁⲟⲩⲱⲛ ⲛⲁϥ.”</p>
 			<p>ⲗⲟⲓⲡⲟⲛ ⲁⲓⲥⲟⲡⲥ ⲛ̄ⲧⲉϥⲙⲛⲧⲁⲅⲁⲑⲟⲥ ϩⲛ̄ⲟⲩⲙⲟⲩⲛ ⲉⲃⲟⲗ ϫⲉⲕⲁⲁⲥ ⲉϥⲉⲣ̄ⲟⲩⲟⲉⲓⲛ ⲉⲡⲁⲛⲟⲩⲥ ⲉⲧⲃⲉⲡⲓⲙⲩⲥⲧⲏⲣⲓⲟⲛ ⲉⲧϩⲏⲡ ⲛ̄ⲧⲉⲛⲉⲥϩⲁⲓ ⲉⲧϩⲛ̄ⲡⲁⲗⲫⲁⲃⲏⲧⲁ.</p>
-			<p></p>
+			<p>ⲁⲩⲱ ⲧⲉϥⲙⲛⲧⲁⲅⲁⲑ ⲉⲧⲟϣ ⲁⲩⲱ ⲛ̄ⲁⲧϣⲁϫⲉ ⲉⲣⲟⲥ ⲉⲥϣⲟⲟⲡ ϣⲁⲉⲛⲉϩ ⲛ̄ⲛⲉⲧⲙⲡϣⲁ ⲙⲛ̄ⲛⲉⲧⲉⲛ̄ⲥⲉⲙⲡϣⲁ ⲁⲛ ϩⲓⲟⲩⲥⲟⲡ.</p>
+			<p>ⲛ̄ⲧϩⲉ ⲛ̄ⲧⲁϥϣⲱⲡ ⲉⲣⲟϥ ⲙ̄ⲡⲧⲱⲃϩ ⲛ̄ⲉⲛⲣⲙⲛⲓⲛⲏⲩⲉ ⲙⲛ̄ⲙⲁⲛⲁⲥⲥⲏ ⲙⲛ̄ⲧⲡⲟⲣⲛⲏ ⲙⲛ̄ⲡⲧⲉⲗⲱⲛⲏⲥ ⲙⲛ̄ⲡⲗⲏⲥⲧⲏⲥ ⲉⲧϩⲓⲟⲩⲛⲁⲙ ϩⲓⲡⲓⲥⲧⲁⲩⲣⲟⲥ ⲙⲛ̄ⲕⲉⲙⲏⲏϣⲉ ⲛ̄ⲧⲃⲁ ⲛ̄ⲣⲉϥⲣⲛⲟⲃⲉ ⲁϥⲥⲱⲧⲙ ⲉⲣⲟⲟⲩ ϩⲛ̄ⲧⲉϥⲙⲛⲧⲁⲅⲁⲑⲟⲥ ⲉⲧⲟϣ ⲛⲧⲟϥ ⲟⲛ ⲁϥⲕⲁⲧⲁⲝⲓⲟⲩ ⲧⲉⲛⲟⲩ ⲁϥϣⲱⲡ ⲉⲣⲟϥ ⲙ̄ⲡⲧⲱⲃϩ ⲛ̄ⲧⲁⲙⲛⲧⲣⲉϥⲣⲛⲟⲃⲉ, ⲁⲩⲱ ⲛ̄ⲧϩⲉ ⲉⲧⲉϥⲥⲟⲟⲩⲛ ⲁⲩⲱ ⲉϥⲣ̄ⲙⲛⲧⲣⲉ ⲙⲁⲩⲁⲁϥ ⲛⲧⲟϥ ⲡⲉⲧⲛⲏⲩ ⲉⲕⲣⲓⲛⲉ ⲛ̄ⲧⲟⲓⲕⲟⲩⲙⲉⲛⲏ.</p>
+			<p>ϫⲉ ⲡⲙⲩⲥⲧⲏⲣⲓⲟⲛ ⲡⲁⲓ ⲛ̄ⲟⲩⲉⲃⲟⲗ ϩⲛ̄ⲣⲱⲙⲉ ⲁⲛ ⲡⲉ ⲁⲛⲉⲓⲙⲉ ⲉⲣⲟϥ ⲏ ⲁⲛϫⲓⲥⲃⲱ ⲉⲣⲟϥ, ⲁⲗⲗⲁ ⲡⲉⲛⲧⲁϥϯ ⲛ̄ⲟⲩϣⲁϫⲉ ⲉⲣⲱⲥ ⲛ̄ⲧⲉⲱ ⲛ̄ⲃⲁⲗⲁϩⲁⲙ ⲙ̄ⲡⲉⲟⲩⲟⲉⲓϣ ϩⲙ̄ⲡⲧⲣⲉⲥⲛⲁⲩ ⲉⲡⲁⲅⲅⲉⲗⲟⲥ ⲙ̄ⲡⲛⲟⲩⲧⲉ ⲛⲧⲟϥ ⲟⲛ ⲧⲉⲛⲟⲩ ⲉⲧⲃⲉⲧⲱⲓ ⲁⲛ ⲛ̄ⲁⲣⲏⲧⲉ, ⲁⲗⲗⲁ ⲉⲧⲃⲉⲡⲕⲱⲧ ⲛ̄ⲧⲉϥⲉⲕⲕⲗⲏⲥⲓⲁ ⲉⲧⲟⲩⲁⲁⲃ, ⲁϥⲧⲛⲛⲟⲟⲩ ⲙ̄ⲡⲉϥⲁⲅⲅⲉⲗⲟⲥ ⲉⲧⲟⲩⲁⲁⲃ ⲁϥⲟⲩⲱⲛ ⲛⲉⲛⲃⲁⲗ ⲛ̄ⲧⲁⲯⲩⲭⲏ ⲁϥⲣ̄ⲟⲩⲟⲉⲓⲛ ⲉⲣⲟⲓ, ⲁⲩⲱ ⲁⲓⲛⲁⲩ ⲉⲣⲟⲓ ⲛ̄ⲧϩⲉ ϩⲱⲥ ⲉⲓϣⲟⲟⲡ ϩⲛ̄ⲟⲩⲉⲕⲥⲧⲁⲥⲓⲥ.</p>
+			<p>ⲁⲓⲑⲉⲱⲣⲉⲓ ⲙ̄ⲙⲟⲓ ⲛ̄ⲟⲩⲟⲩϣⲏ ϩⲱⲥ ⲉϣϫⲉ ⲉⲓⲁϩⲉⲣⲁⲧ ϩⲓϫⲙ̄ⲡⲧⲟⲟⲩ ⲛ̄ⲥⲓⲛⲁ ⲡⲙⲁ ⲛ̄ⲧⲁϥϣⲱⲡⲉ ⲛ̄ϩⲏⲧϥ̄ ⲛ̄ϭⲓⲡⲛⲟⲙⲟⲥ ⲙ̄ⲡⲛⲟⲩⲧⲉ ⲙⲛ̄ⲡϭⲟⲗⲡ ⲉⲃⲟⲗ ⲛ̄ⲧϭⲓⲛϣⲱⲡⲉ ⲙ̄ⲡⲕⲟⲥⲙⲟⲥ ⲙ̄ⲡⲛⲟϭ ⲙⲱⲩⲥⲏⲥ ⲉⲃⲟⲗ ϩⲓⲧⲙ̄ⲡⲛⲟⲩⲧⲉ.</p>
+			<p>ⲁⲩⲱ ϩⲛ̄ⲟⲩϩⲟⲧⲉ ⲁⲓⲛⲁⲩ ⲉⲩⲕⲣⲁⲧⲟⲥ ⲛ̄ⲇⲉⲥⲡⲟⲧⲓⲕⲟⲛ ⲉⲩϩⲱⲥ ⲉⲣⲟϥ ⲛ̄ϭⲓϩⲉⲛⲗⲁⲟⲥ ⲉⲩⲟϣ ⲡⲁⲓ ⲉⲃⲟⲗ ⲙ̄ⲙⲟϥ ⲡⲉ ⲡⲟⲩⲟⲉⲓⲛ ⲉⲣⲥⲟⲫⲟⲛ ⲛ̄ⲧϩⲉ ⲉⲧⲉϥⲥⲟⲟⲩⲛ ⲙⲁⲩⲁⲁϥ.</p>
+			<p>ⲁⲓⲥⲱⲧⲙ ⲉⲡϭⲱⲗⲡ ⲉⲃⲟⲗ ⲛ̄ⲧⲉⲛⲉⲥϩⲁⲓ ⲙⲛ̄ⲧⲉⲩϭⲓⲛϣⲱⲡⲉ ⲁⲩⲱ ⲁⲓϫⲓⲥⲃⲱ ⲉⲃⲟⲗ ϩⲓⲧⲟⲟⲧϥ̄ ⲁⲩⲱ ⲟⲛ ⲁⲓⲣ̄-ⲡⲕⲉⲥϩⲁⲓⲥⲟⲩ.</p>
+			<p>ⲡⲉⲧⲡⲓⲥⲧⲉⲩⲉ ⲟⲩⲛ ⲉⲛⲉⲧⲛ̄ϫⲱ ⲙ̄ⲙⲟⲟⲩ ⲟⲩⲡⲓⲥⲧⲟⲥ ⲡⲉ. ⲡⲉⲧⲟ ⲇⲉ ⲛ̄ⲁⲧⲛⲁϩⲧⲉ ⲉⲥⲉϣⲱⲡⲉ ⲛⲁϥ ⲛ̄ϭⲓⲧⲙⲉⲣⲓⲥ ⲛ̄ⲛ̄ⲁⲡⲓⲥⲧⲟⲥ, ⲁⲩⲱ ⲛ̄ⲥⲉϯϩⲁⲡ ⲉⲣⲟϥ ⲛⲙ̄ⲙⲁⲩ ϩⲙ̄ⲡⲉϩⲟⲟⲩ ⲙ̄ⲡϩⲁⲡ ⲙ̄ⲙⲉ.</p>
+			<p>ⲉϥϯⲥⲃⲱ ⲛⲁⲛ ⲧⲉⲛⲟⲩ ⲛ̄ϭⲓⲡⲣⲉϥϯⲥⲃⲱ ⲉⲧⲉⲛⲉϥⲣ̄ⲭⲣⲉⲓⲁ ⲁⲛ ⲛ̄ⲥⲃⲱ ⲉⲡⲓⲙⲩⲥⲧⲏⲣⲓⲟⲛ ⲉⲧⲙ̄ⲙⲁⲩ ⲉⲧϩⲏⲡ ϫⲓⲛⲉⲡⲓⲉⲛⲉϩ ⲛ̄ⲧⲉⲛⲉⲥϩⲁⲓ ⲙ̄ⲡⲁⲗⲫⲁⲃⲏⲧⲁ, ⲉϥϫⲱ ⲙ̄ⲙⲟⲥ ⲛ̄ⲧⲉⲓϩⲉ:</p>
+			<h3>ⲟⲩϭⲓⲛϣⲁϫⲉ ⲛ̄ⲧⲉⲡⲛⲟⲩⲧⲉ</h3>
+			<p>ⲥⲉϫⲱ ⲙⲉⲛ ⲙ̄ⲙⲟⲥ ⲉⲛⲓⲥϩⲁⲓ, ⲛⲁⲓ ϫⲉ ϩⲉⲛⲥⲧⲓⲭⲟⲥ ⲛⲉ, ⲟⲩⲭⲟⲧⲓ ϫⲉ ⲛⲉⲩϫⲏⲕ ⲉⲃⲟⲗ ⲁⲛ ⲛ̄ⲥⲧⲓⲭⲟⲥ ⲛ̄ⲧϩⲉ ⲉⲧⲟⲩⲙⲉⲉⲩⲉ ⲉⲣⲟⲥ ⲛ̄ϭⲓⲛ̄ⲥⲟⲫⲟⲥ ⲛ̄ϩⲉⲗⲗⲏⲛ [ⲉⲧϣⲟⲩⲉⲓⲧ ⲛ̄ⲛⲉⲥϣⲱⲡⲉ], ⲁⲗⲗⲁ ⲉⲧⲃⲉⲡⲧⲩⲡⲟⲥ ⲛ̄ⲛⲉⲥϩⲏⲙⲁ ⲛ̄ⲛⲉⲥⲧⲟⲓⲭⲓⲟⲛ ⲛ̄ⲧⲉ-ⲧⲉⲕⲧⲏⲥⲓⲥ ⲙ̄ⲡⲕⲟⲥⲙⲟⲥ ϣⲱⲡⲉ ϩⲣⲁⲓ ⲛ̄ϩⲏⲧⲟⲩ ϩⲛ̄ⲧⲉⲩϭⲓⲛⲥϩⲁⲓ.</p>
+			<p>ⲟⲩⲁ ⲙⲉⲛ ⲟⲩⲛ̄ⲧⲁϥ ⲙ̄ⲙⲁⲩ ⲙ̄ⲡⲉⲥϩⲏⲙⲁ ⲛ̄ⲧⲡⲉ ⲙⲛ̄ⲡⲕⲁϩ, ⲕⲉⲟⲩⲁ ⲇⲉ ⲟⲛ ⲁⲩⲥⲁϩϥ̄ ⲙ̄ⲡⲧⲩⲡⲟⲥ ⲙ̄ⲡⲕⲁϩ ⲙⲛ̄ⲧⲡⲉ, ⲕⲉⲟⲩⲁ ⲙ̄ⲡⲧⲩⲡⲟⲥ ⲙ̄ⲡⲕⲁϩ ⲙⲛ̄ⲡⲙⲟⲟⲩ, ⲕⲉⲟⲩⲁ ⲙ̄ⲡⲉⲥⲙⲟⲧ ⲛ̄ⲛ̄ⲛⲟⲩⲛ ⲙⲛ̄ⲡⲕⲁⲕⲉ, ⲕⲉⲟⲩⲁ ⲇⲉ ⲙ̄ⲡⲉⲥⲙⲟⲧ ⲙ̄ⲡⲉⲡ︤ⲛ︦ⲁ︥ ⲙⲛ̄ⲡⲙⲟⲟⲩ, ⲕⲉⲟⲩⲁ ⲇⲉ ⲉϥⲥⲩⲙⲁⲛⲉ ⲙ̄ⲡⲉⲥⲭⲏⲙⲁ ⲙ̄ⲡⲟⲩⲟⲉⲓⲛ, ⲕⲉⲟⲩⲁ ⲇⲉ ⲉϥⲟ ⲛ̄ⲧⲩⲡⲟⲥ ⲙ̄ⲡⲉⲥⲧⲉⲣⲉⲱⲙⲁ ⲛ̄ⲧⲡⲉ, ⲕⲉⲟⲩⲁ ⲇⲉ ⲉϥⲟⲩⲱⲛϩ ⲉⲃⲟⲗ ⲙ̄ⲡⲡⲱⲣϫ ⲉⲃⲟⲗ ⲙ̄ⲡⲙⲟⲟⲩ ⲉⲧⲥⲁⲡϣⲱⲓ ⲙⲛ̄ⲡⲙⲟⲟⲩ ⲉⲧⲥⲁⲡⲉⲥⲏⲧ, ⲕⲉⲟⲩⲁ ⲇⲉ ⲉϥⲟ ⲛ̄ⲧⲩⲡⲟⲥ ⲙ̄ⲡϭⲱⲗⲡ ⲉⲃⲟⲗ ⲙ̄ⲡⲕⲁϩ ⲙⲛ̄ⲧϭⲓⲛⲥⲱⲟⲩϩ ⲛ̄ⲙ̄ⲙⲟⲟⲩ ⲉⲩⲥⲟⲟⲩϩⲥ̄ ⲛ̄ⲟⲩⲱⲧ.</p>
 			<p></p>
 			<p></p>
 		</div>
@@ -40,7 +56,17 @@
 			<p>Ceci m'arriva, dit-il, au temps où je m'appliquais avec persistance à prier Dieu, dans le désert. Un jour je pris en mains le livre de la Révélation que reçut, dans Patmos, le bienheureux Jean, le théologien; et j'y lisais jusqu'à ce que je fusse arrivé à l'endroit où le Christ dit à Jean: «Je suis l'alpha et l'oméga», puis répète jusqu'à une seconde et une troisième fois: «Je suis l'alpha et l'oméga» (1). En entendant donc ces paroles, je pensai incontinent à cette autre parole de l'Évangile du Seigneur, disant: «Pas un seul iota ni un seul point ne passeront jusqu'à ce que tout cela arrive.»</p>
 			<p>Je jugeai de suite qu'un mystère divin se trouvait dans les lettres de l'alphabet, un mystère qui ne nous était pas dévoilé. Or donc, en tout simplicité de cœur, je fis un acte de foi au Christ qui a dit: «Demandez pour que l'on vous donne, cherchez pour que vous trouviez, frappez pour qu'on vous ouvre; car quiconque demande recevra et celui qui cherche trouvera, et on ouvrira à celui qui frappe».</p>
 			<p>Je priai donc sa bonté avec persévérance, pour qu'il éclairât mon esprit au sujet de ce mystère caché des lettres de l'alphabet.</p>
-			<p></p>
+			<p>Sa grande et indicible bonté s'étend à jamais aux dignes et aux indignes à la fois.</p>
+			<p>Il a accueilli la prière des Ninivites, et de Manassès, et de la femme adultère, et du publicain, et du brigand qui était à la droite de la croix, et d'une multitude d'autres pécheurs; il les a écoutes dans sa grande bonté. Ainsi également, il a daigné maintenant accueillir la prière de mon âme pécheresse (1). Et, comme seul il connait (tout) et est témoin (de tout), c'est lui qui viendra juger l'univers.</p>
+			<p>En effet, ce mystère, ce n'est pas par un homme que nous les connaissons ou que nous l'avons appris, mais par Celui qui plaça autrefois une parole dans la bouche de l'âne de Balaam, à la vue de l'ange de Dieu. Lui-même donc, non pour mes mérites, mais pour l'édification de son Église sainte, il envoya son saint ange, ouvrit les yeux de mon intelligence et m'éclaira. Et je me vis comme en extase.</p>
+			<p>Je me vis, une nuit, comme me trouvant debout sur le mont Sina, l'endroit de la promulgation de la loi divine et de la révélation de l'origine du monde (1), faite par Dieu au grand Moïse.</p>
+			<p>Sur l'heure, je vis une Puissance souveraine que célébraient des peuples nombreux; c'est d'Elle que vient la lumière de la sagesse, car Elle seule a la science (2).</p>
+			<p>J'entendis l'explication des lettres et de leur existence et je fus instruit par Elle, et j'écrivis aussi ces choses.</p>
+			<p>Celui, donc, qui ajoute foi à nos paroles est un fidèle; celui qui n'y croit pas, aura le partage des infidèles; qu'il soit jugé au grand jour du jugement!</p>
+			<p>Voici que le Maître, qui n'a pas besoin d'enseignement, nous a instruit au sujet de ce mystère, caché jusqu'à cet âge, des lettres de l'alphabet. Il parla ainsi.</p>
+			<h3>Une parole de Dieu.</h3>
+			<p>On donne à ces lettres le nom d'éléments, <span class="greek"></span> non pas, parce qu'elles ne sont (elles-mêmes) composés d'aucun élément (1), comme l'ont pensé les sages de la Grèce [dans leur vanité, loin de là!]; mais parce que, dans leur tracé, se trouve figurée la forme des éléments du monde créé.</p>
+			<p>L'une de ces lettres renferme l'image du ciel et de la terre; une autre est écrite pour figurer la terre et le ciel, une autre pour figurer la terre et l'eau, une autre pour représenter les abîmes (les <i>noun</i>) et les ténèbres, une autre pour représenter le vent et l'eau;</p>
 			<p></p>
 			<p></p>
 		</div>
