les mysteres des lettres grecques

--- a/coptic/wip/les_mysteres_des_lettres_grecques.html
+++ b/coptic/wip/les_mysteres_des_lettres_grecques.html
@@ -5,6 +5,10 @@
 		<!--<link rel="stylesheet" href="./styles/styles.css">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<style>
+			::selection {
+				background: #1abc9caa;
+				color: #aaa;
+			}
 			body {
 				color: #777;
 				background: #111;
@@ -14,6 +18,11 @@
 			
 			h3 {
 				font-weight: normal;
+				color: #ffffff;
+			}
+			
+			div {
+				font-size: 1.25em;
 			}
 			
 			#source_coptic p,
@@ -45,6 +54,17 @@
 			<h3>ⲟⲩϭⲓⲛϣⲁϫⲉ ⲛ̄ⲧⲉⲡⲛⲟⲩⲧⲉ</h3>
 			<p>ⲥⲉϫⲱ ⲙⲉⲛ ⲙ̄ⲙⲟⲥ ⲉⲛⲓⲥϩⲁⲓ, ⲛⲁⲓ ϫⲉ ϩⲉⲛⲥⲧⲓⲭⲟⲥ ⲛⲉ, ⲟⲩⲭⲟⲧⲓ ϫⲉ ⲛⲉⲩϫⲏⲕ ⲉⲃⲟⲗ ⲁⲛ ⲛ̄ⲥⲧⲓⲭⲟⲥ ⲛ̄ⲧϩⲉ ⲉⲧⲟⲩⲙⲉⲉⲩⲉ ⲉⲣⲟⲥ ⲛ̄ϭⲓⲛ̄ⲥⲟⲫⲟⲥ ⲛ̄ϩⲉⲗⲗⲏⲛ [ⲉⲧϣⲟⲩⲉⲓⲧ ⲛ̄ⲛⲉⲥϣⲱⲡⲉ], ⲁⲗⲗⲁ ⲉⲧⲃⲉⲡⲧⲩⲡⲟⲥ ⲛ̄ⲛⲉⲥϩⲏⲙⲁ ⲛ̄ⲛⲉⲥⲧⲟⲓⲭⲓⲟⲛ ⲛ̄ⲧⲉ-ⲧⲉⲕⲧⲏⲥⲓⲥ ⲙ̄ⲡⲕⲟⲥⲙⲟⲥ ϣⲱⲡⲉ ϩⲣⲁⲓ ⲛ̄ϩⲏⲧⲟⲩ ϩⲛ̄ⲧⲉⲩϭⲓⲛⲥϩⲁⲓ.</p>
 			<p>ⲟⲩⲁ ⲙⲉⲛ ⲟⲩⲛ̄ⲧⲁϥ ⲙ̄ⲙⲁⲩ ⲙ̄ⲡⲉⲥϩⲏⲙⲁ ⲛ̄ⲧⲡⲉ ⲙⲛ̄ⲡⲕⲁϩ, ⲕⲉⲟⲩⲁ ⲇⲉ ⲟⲛ ⲁⲩⲥⲁϩϥ̄ ⲙ̄ⲡⲧⲩⲡⲟⲥ ⲙ̄ⲡⲕⲁϩ ⲙⲛ̄ⲧⲡⲉ, ⲕⲉⲟⲩⲁ ⲙ̄ⲡⲧⲩⲡⲟⲥ ⲙ̄ⲡⲕⲁϩ ⲙⲛ̄ⲡⲙⲟⲟⲩ, ⲕⲉⲟⲩⲁ ⲙ̄ⲡⲉⲥⲙⲟⲧ ⲛ̄ⲛ̄ⲛⲟⲩⲛ ⲙⲛ̄ⲡⲕⲁⲕⲉ, ⲕⲉⲟⲩⲁ ⲇⲉ ⲙ̄ⲡⲉⲥⲙⲟⲧ ⲙ̄ⲡⲉⲡ︤ⲛ︦ⲁ︥ ⲙⲛ̄ⲡⲙⲟⲟⲩ, ⲕⲉⲟⲩⲁ ⲇⲉ ⲉϥⲥⲩⲙⲁⲛⲉ ⲙ̄ⲡⲉⲥⲭⲏⲙⲁ ⲙ̄ⲡⲟⲩⲟⲉⲓⲛ, ⲕⲉⲟⲩⲁ ⲇⲉ ⲉϥⲟ ⲛ̄ⲧⲩⲡⲟⲥ ⲙ̄ⲡⲉⲥⲧⲉⲣⲉⲱⲙⲁ ⲛ̄ⲧⲡⲉ, ⲕⲉⲟⲩⲁ ⲇⲉ ⲉϥⲟⲩⲱⲛϩ ⲉⲃⲟⲗ ⲙ̄ⲡⲡⲱⲣϫ ⲉⲃⲟⲗ ⲙ̄ⲡⲙⲟⲟⲩ ⲉⲧⲥⲁⲡϣⲱⲓ ⲙⲛ̄ⲡⲙⲟⲟⲩ ⲉⲧⲥⲁⲡⲉⲥⲏⲧ, ⲕⲉⲟⲩⲁ ⲇⲉ ⲉϥⲟ ⲛ̄ⲧⲩⲡⲟⲥ ⲙ̄ⲡϭⲱⲗⲡ ⲉⲃⲟⲗ ⲙ̄ⲡⲕⲁϩ ⲙⲛ̄ⲧϭⲓⲛⲥⲱⲟⲩϩ ⲛ̄ⲙ̄ⲙⲟⲟⲩ ⲉⲩⲥⲟⲟⲩϩⲥ̄ ⲛ̄ⲟⲩⲱⲧ.</p>
+			<p>ⲁⲩⲱ ⲡⲁⲗⲓⲛ ⲟⲛ, ⲟⲩⲁ ⲙⲉⲛ ⲉϥⲟ ⲛ̄ⲧⲩⲡⲟⲥ ⲛ̄ⲛ̄ⲃⲟⲧⲁⲛⲏ, ⲕⲉⲟⲩⲁ ⲇⲉ ⲉϥⲟ ⲛ̄ⲧⲩⲡⲟⲥ ⲛ̄ⲛ̄ϣⲏⲛ ⲛ̄ⲣⲉϥϯⲕⲁⲣⲡⲟⲥ, ⲟⲩⲁ ⲟⲛ ⲉϥⲟⲩⲱⲛϩ ⲉⲃⲟⲗ ⲙ̄ⲡⲟⲩⲟⲉⲓⲛ ⲛ̄ⲛⲉⲫⲱⲥⲧⲏⲣ, ⲕⲉⲟⲩⲁ ⲇⲉ ⲟⲛ ⲉϥⲛ̄ϩⲏⲧϥ̄ ⲛ̄ϭⲓⲡⲙⲁⲉⲓⲛ ⲙ̄ⲡⲣⲏ ⲙⲛ̄ⲡⲟⲟϩ, ⲕⲉⲟⲩⲁ ⲇⲉ ⲟⲛ ⲉϥⲟ ⲛ̄ϩⲉⲓⲕⲱⲛ ⲛ̄ⲧϭⲓⲛⲕⲁⲁⲩ ϩⲛ̄ⲧⲡⲉ, ⲕⲁⲧⲁⲧϩⲉ ⲧⲉⲛⲟⲩ ⲉⲧⲛ̄ⲛⲁⲟⲩⲉⲛϩ-ⲡⲁⲓ ⲉⲃⲟⲗ ⲛ̄ⲥⲁⲧⲟⲟⲧⲛ̄ ϩⲙ̄ⲡⲟⲩⲱϣ ⲙ̄ⲡⲛⲟⲩⲧⲉ ⲡⲣⲟⲥ ⲛ̄ⲛ̄ⲧⲁⲛⲛⲁⲩ ⲉⲣⲟⲟⲩ ⲁⲩⲱ ⲁⲛⲥⲟⲧⲙⲟⲩ ⲉⲃⲟⲗ ϩⲓⲧⲟⲟⲧϥ̄ ⲛⲧⲟϥ ⲡⲉ ⲡⲛⲟⲩⲧⲉ.</p>
+			<h3>[ϩ]ⲟⲙⲟⲓⲱⲥ ⲕⲉⲫⲁⲗⲁⲓⲟⲛ ⲃ̅</h3>
+			<p>ⲡⲓⲙⲩⲥⲧⲏⲣⲓⲟⲛ ⲇⲉ ⲡⲁⲓ ⲟⲩⲧⲉⲓⲙⲓⲛⲉ ⲡⲉ, ⲁϥⲟⲓⲕⲟⲛⲟⲙⲉⲓ ⲅⲁⲣ ⲛ̄ϭⲓⲡⲛⲟⲩⲧⲉ ⲉⲝⲱⲅⲣⲁⲫⲉⲓ ⲛ̄ϩⲉⲛⲥϩⲁⲓ ⲛ̄ϩⲉⲗⲗⲏⲛⲓⲕⲟⲛ ϩⲁⲧϩⲏ ⲛ̄ⲧⲙⲛⲧⲣⲉϥϣⲙϣⲉ ⲉⲓⲇⲱⲗⲟⲛ ⲛ̄ⲛ̄ϩⲉⲑⲛⲟⲥ, ϫⲉⲕⲁⲁⲥ ⲉⲩⲟⲩⲱϣ ⲁⲛ ⲛ̄ⲥⲉⲕⲁ-ϫⲱⲟⲩ ⲛ̄ⲧⲙⲛⲧⲣⲉϥϣⲙϣⲉ ⲛⲟⲩⲧⲉ ⲁⲩⲱ ⲛ̄ⲥⲉϩⲟⲙⲟⲗⲟⲅⲉⲓ ⲙ̄ⲙⲟⲥ, ϭⲓϫ ⲅⲁⲣ ⲛⲓⲙ ⲏ ⲟⲩⲛⲁⲙ ⲛ̄ⲧⲉⲟⲩⲣⲱⲙⲉ ⲛ̄ϩⲉⲗⲗⲏⲛ ⲁⲩⲱ ⲛ̄ⲁⲧⲛⲟⲩⲧⲉ ⲁⲩⲱ ⲛ̄ⲣⲉϥϣⲙϣⲉ ⲉⲓⲇⲱⲗⲟⲛ, ⲉϣⲱⲡⲉ ⲉϥϣⲁⲛⲥϩⲁⲓ ⲛ̄ϩⲏⲧⲥ̄ ⲙ̄ⲡⲧⲩⲡⲟⲥ ⲛ̄ⲛⲉⲥϩⲁⲓ ⲛⲁⲓ ⲛ̄ϥⲧⲙ̄ⲟⲩⲱϣ ⲁⲩⲱ ⲛ̄ϥⲧⲙ̄ϯⲙⲁⲧⲉⲓ ϩⲏⲇⲓⲟⲛ ⲁϥϩⲟⲙⲟⲗⲟⲅⲉⲓ ⲁⲩⲱ ⲁϥⲥϩⲁⲓ ϩⲙ̄ⲡⲉϥⲟⲩⲱϣ ϫⲉ ⲡⲓⲕⲟⲥⲙⲟⲥ ⲟⲩⲁⲧⲛⲟⲩⲧⲉ ⲁⲛ ⲡⲉ ⲟⲩⲇⲉ ⲛ̄ⲟⲩⲁⲧⲥⲟⲛⲧϥ̄ ⲁⲛ ⲡⲉ, ⲛ̄ⲧϩⲉ ⲛ̄ⲧⲁⲥⲇⲟⲕⲉⲓ ⲛ̄ⲛⲓⲁⲧⲛⲟⲩⲧⲉ ⲛ̄ϩⲉⲗⲗⲏⲛ ⲉⲧϫⲱ ⲙ̄ⲡⲁⲓ, ⲁⲗⲗⲁ ϫⲉ ϥϣⲟⲟⲡ ⲛ̄ϭⲓⲡⲛⲟⲩⲧⲉ ⲁⲩⲱ ⲛⲧⲟϥ ⲡⲉ ϫⲓⲛⲛ̄ϣⲟⲣⲡ ⲁϥⲧⲁⲙⲓⲉ-ⲧⲡⲉ ⲙⲛ̄ⲡⲕⲁϩ ⲙⲛ̄ⲧϩⲁⲗⲁⲥⲥⲁ ⲙⲛ̄ⲛⲉⲧⲉⲛⲛⲁⲩ ⲉⲣⲟⲟⲩ ⲧⲏⲣⲟⲩ ⲛ̄ⲧⲉⲡⲥⲱⲛⲧ ⲙⲛ̄ⲛ̄ⲥⲱⲛⲧ ⲟⲛ ⲛ̄ⲁⲧⲛⲁⲩ ⲉⲣⲟⲟⲩ, ⲁⲩⲱ ϫⲉ ⲛⲉϥϣⲟⲟⲡ ⲛ̄ϭⲓⲡⲕⲁϩ ⲛ̄ⲁⲧⲛⲁⲩ ⲉⲣⲟϥ, ⲁⲩⲱ ⲛ̄ⲁⲧⲥⲃⲧⲱⲧϥ̄, ⲁⲩⲱ ϫⲉ ⲟⲩⲙⲛⲧⲙⲉ ⲧⲉ ⲧⲉⲅⲣⲁⲫⲏ ⲛ̄ⲛⲟⲩⲧⲉ ⲛ̄ⲧⲉⲙⲱⲩⲥⲏⲥ, ⲧⲁⲓ ⲉⲧϫⲱ ⲛ̄ⲛⲁⲓ ϫⲉ ⲛⲉⲣⲉ-ⲟⲩⲕⲁⲕⲉ ϩⲓϫⲙ̄ⲡⲛⲟⲩⲛ, ⲁⲩⲱ ⲟⲛ ϫⲉ ⲡⲉⲡ︤ⲛ︦ⲁ︥ ⲙ̄ⲡⲛⲟⲩⲧⲉ ⲉϥⲛⲁ ⲉϥⲛⲏⲩ ϩⲓϫⲛⲙ̄ⲙⲟⲟⲩ, ⲁⲩⲱ ϫⲉ ⲡⲓⲇⲓⲙⲓⲟⲩⲣⲅⲟⲥ ⲙ̄ⲡⲟⲩⲟⲉⲓⲛ ⲡⲉ ⲡⲛⲟⲩⲧⲉ, ⲁⲩⲱ ⲉϥⲡⲱⲣϫ ⲙ̄ⲡⲕⲁⲕⲉ ⲉⲃⲟⲗ ⲙ̄ⲡⲟⲩⲟⲉⲓⲛ, ⲁⲩⲱ ⲟⲛ ϩⲙ̄ⲡⲉϥⲟⲩⲉϩⲥⲁϩⲛⲉ ⲁϥϣⲱⲡⲉ ⲛ̄ϭⲓⲡⲕⲁϩ ⲉϥⲁϣⲉ ϩⲓϫⲙ̄ⲡⲙⲟⲟⲩ.</p>
+			<p>ⲁⲩⲱ ⲟⲩ ⲉⲣⲟⲓ ⲡⲉ ⲉϣⲁϫⲉ ⲉⲧⲃⲉⲛⲓⲍⲱⲛⲧ, ⲟⲩ ⲅⲁⲣ ⲛⲁⲓ ⲙⲁⲩⲁⲁⲩ ⲁⲛ, ⲁⲗⲗⲁ ⲟⲛ ⲙⲛ̄ ⲉⲧⲃⲏⲏⲧϥ̄ ⲡⲣⲉϥⲥⲱⲛⲧ ⲛ̄ⲛⲁⲓ ⲧⲏⲣⲟⲩ ⲡⲉⲭ︤ⲥ︥, ⲡⲁⲓ ⲉⲧϫⲱ ⲙ̄ⲙⲟⲥ ϫⲉ ⲁⲛⲟⲕ ⲡⲉ ⲁⲗⲫⲁ ⲁⲩⲱ ⲱ.</p>
+			<p>ⲁⲩⲱ ϩⲙ̄ⲡⲓⲁⲗⲫⲁⲃⲏⲧⲁ ⲟⲛ, ⲡⲁⲓ ⲉⲧⲟⲩⲙⲉⲉⲩⲉ ⲉϫⲉ-ⲟⲩϭⲱϫⲃ ⲡⲉ, ⲛⲉϥϣⲟⲟⲡⲉ ⲛ̄ϭⲓⲡⲙⲩⲥⲧⲏⲣⲓⲟⲛ ⲉⲧϩⲏⲡ ϫⲓⲛⲧⲕⲁⲧⲁⲃⲟⲗⲏ ⲙ̄ⲡⲕⲟⲥⲙⲟⲥ, ⲉⲣⲉ-ⲧⲏⲡⲉ ⲙ̄ⲡⲉⲥⲭⲏⲙⲁ ⲉⲧⲉⲛ̄ϩⲏⲧϥ̄ ϯⲥⲃⲱ ⲛⲁⲛ ⲛ̄ⲧϭⲓⲛⲉⲓ ⲉⲡⲉⲥⲏⲧ ⲙ̄ⲡⲛⲟⲩⲧⲉ ⲡⲗⲟⲅⲟⲥ ⲉⲃⲟⲗ ϩⲛ̄ⲧⲡⲉ ⲙⲛ̄ⲡⲉⲭⲣⲟⲛⲟⲥ ⲛ̄ⲧⲁϥⲁⲡⲟⲇⲏⲙⲉⲓ ϣⲁⲣⲟⲛ ⲛ̄ϩⲏⲧϥ̄ ⲙⲛ̄ⲧϭⲓⲛⲕⲁⲥⲛⲧⲉ ⲛ̄ⲧⲉⲕⲕⲗⲏⲥⲓⲁ ⲉⲃⲟⲗ ϩⲓⲧⲟⲟⲧϥ̄, ⲁⲩⲱ ⲛⲁⲓ ⲙⲁⲩⲁⲁⲩ ⲁⲛ, ⲁⲗⲗⲁ ⲟⲛ ⲉⲧⲃⲉⲡⲉϥⲙⲕⲁϩ ⲛ̄ⲟⲩϫⲁⲓ ϩⲓⲡⲓⲥⲧⲁⲩⲣⲟⲥ, ⲁⲩⲱ ϫⲉ ⲉⲃⲟⲗ ϩⲓⲧⲟⲟⲧϥ̄ ⲁⲛⲧⲙⲁⲉⲓⲟ ⲁⲩⲱ ⲁⲛϫⲓ ⲙ̄ⲡϩⲁⲅⲓⲁⲥⲙⲟⲥ, ⲁⲩⲱ ϫⲉ ⲟⲩ ⲙⲟⲛⲟⲛ ⲛⲉⲧϩⲓϫⲙ̄ⲡⲕⲁϩ ⲙⲁⲩⲁⲁⲩ ⲁ-ⲡⲉϩⲙⲟⲧ ⲧⲁϩⲟⲟⲩ, ⲁⲗⲗⲁ ⲛⲉⲧϩⲛ̄ⲁⲙⲛⲧⲉ ⲟⲛ ⲁⲩⲁⲡⲟⲗⲁⲩⲉ ⲛ̄ⲧⲡⲁⲣⲣⲟⲩⲥⲓⲁ ⲙ̄ⲡⲉⲭ︤ⲥ︥, ⲁⲩⲱ ϫⲉ ⲁϥⲃⲱⲕ ⲁϥⲧⲁϣⲉⲟⲉⲓϣ ⲛ̄ⲛⲉⲧⲟⲩⲁⲙⲁϩⲧⲉ ⲉϫⲱⲟⲩ ϩⲙ̄ⲡⲙⲁ ⲉⲧⲙ̄ⲙⲁⲩ, ⲁⲩⲱ ⲟⲛ ϫⲉ ⲁϥⲧⲱⲟⲩⲛ ⲉⲃⲟⲗ ϩⲛ̄ⲛⲉⲧⲙⲟⲟⲩⲧ, ⲁⲩⲱ ϫⲉ ⲁϥⲃⲱⲕ ⲉϩⲣⲁⲓ ⲙ̄ⲡⲏⲩⲉ, ⲁⲩⲱ ϫⲉ ⲁϥⲧⲛⲛⲟⲟⲩ ⲛⲁⲛ ⲙ̄ⲡⲉⲡ︤ⲛ︦ⲁ︥ ⲙ̄ⲡⲁⲣⲁⲕⲗⲏⲧⲟⲛ, ⲁⲩⲱ ϫⲉ ⲡⲉⲩⲁⲅⲅⲉⲗⲓⲟⲛ ⲥⲉⲧⲁϣⲉⲟⲉⲓϣ ⲙ̄ⲙⲟϥ ϩⲛ̄ⲧⲟⲓⲕⲟⲩⲙⲉⲛⲏ ⲧⲏⲣⲥ̄, ⲁⲩⲱ ϫⲉ ⲛⲉϥⲛⲁⲟⲩⲱⲥϥ ⲁⲛ ⲛ̄ϭⲓⲡⲁⲓ ϣⲁⲧⲥⲩⲛⲧⲉⲗⲓⲁ.</p>
+			<p>ϥϯⲥⲃⲱ ⲛⲁⲛ ⲛ̄ϭⲓⲡⲉⲓⲑⲏⲥⲁⲩⲣⲟⲥ ⲡⲁⲓ ⲛ̄ϭⲓⲡⲟⲩⲁ ⲡⲟⲩⲁ ⲛ̄ⲛⲉⲥϩⲁⲓ, ϫⲉ ⲟⲩⲇⲓⲡⲗⲟⲩⲛ ⲡⲉ ⲡⲉⲭ︤ⲥ︥, ⲉⲧⲉⲡⲁⲓ ⲡⲉ ϫⲉ ⲡⲛⲟⲩⲧⲉ ⲡⲉ, ⲁⲩⲱ ⲡⲣⲱⲙⲉ ϩⲓⲟⲩⲥⲟⲡ, ⲉⲧⲉⲛⲧⲟϥ ⲛⲧⲟϥ ⲡⲉ, ⲁⲩⲱ ⲟⲛ ϫⲉ ϥϣⲟⲟⲡ ⲛ̄ⲟⲩⲙⲁⲉⲓⲛ ⲉϥⲟⲩⲱⲛϩ ⲉⲃⲟⲗ ⲛ̄ⲉⲡⲓⲥⲓⲙⲟⲛ, ⲁⲩⲱ ϫⲉ ⲡⲱⲛϩ ⲡⲉ ⲁⲩⲱ ⲡⲣⲉϥϯ ⲙ̄ⲡⲱⲛϩ, ⲁⲩⲱ ϫⲉ ⲟⲩⲁⲅⲁⲑⲟⲥ ⲡⲉ, ⲁⲩⲱ ϫⲉ ⲛⲧⲟϥ ⲡⲉ ⲡϫⲟⲉⲓⲥ, ⲁⲩⲱ ϫⲉ ⲛⲧⲟϥ ⲡⲉ ⲡⲉⲕⲕⲗⲏⲥⲓⲁⲥⲧⲏⲥ ⲙ̄ⲙⲉ ⲛ̄ⲧⲁϥⲥⲟⲟⲩϩ ⲉϩⲟⲩⲛ ⲛ̄ⲧⲉⲕⲕⲗⲏⲥⲓⲁ ⲉⲧⲟⲩⲁⲁⲃ ⲛ̄ⲧⲉⲙ̄ⲡⲓⲥⲧⲟⲥ, ⲁⲩⲱ ϫⲉ ⲟⲩⲁⲧⲙⲟⲩ ⲡⲉ, ⲁⲩⲱ ϫⲉ ⲟⲩϣⲁⲉⲛⲉϩ ⲡⲉ, ⲁⲩⲱ ϫⲉ ⲛⲧⲟϥ ⲡⲉ ⲡⲉⲥⲧⲏⲣⲓⲅⲙⲟⲥ ⲙⲛ̄ⲧⲃⲟⲏⲑⲓⲁ, ⲁⲩⲱ ϫⲉ ⲛⲧⲟϥ ⲡⲉ ⲡⲣⲉϥⲣⲟⲩⲟⲉⲓⲛ ⲁⲩⲱ ⲧⲙⲉ, ⲁⲩⲱ ⲟⲛ ϫⲉ ⲛⲧⲟϥ ⲡⲉ ⲡϩⲁⲅⲓⲁⲙⲟⲥ ⲁⲩⲱ ⲡⲣⲉϥϩⲁⲣⲉϩ ⲙ̄ⲡⲧⲏⲣϥ, ⲁⲩⲱ ⲟⲛ ϫⲉ ⲛⲧⲟϥ ⲡⲉ ⲧⲁⲣⲭⲏ ⲁⲩⲱ ⲧⲁⲡⲉ ⲁⲩⲱ ⲡⲛⲟⲙⲟⲑⲏⲧⲏⲥ ⲙ̄ⲙⲉ. ϩⲟⲙⲟⲓⲱⲥ ⲛⲓⲡⲉⲧⲥⲁ, ⲛⲓⲡⲉⲧⲛⲁⲛⲟⲩϥ ⲧⲏⲣⲟⲩ, ϥϯⲥⲃⲱ ⲛⲁⲛ ⲟⲛ ⲉⲡⲓϣⲁϫⲉ ⲉⲧⲃⲉⲧⲉⲧⲣⲓⲁⲥ ϩⲓⲧⲛ̄ⲑⲩⲡⲟⲑⲏⲥⲓⲥ ⲙ̄ⲡⲁⲣⲁⲇⲟⲝⲟⲛ ϩⲓⲧⲛ̄ⲛⲉⲥϩⲁⲓ ⲛ̄ϣⲟⲩⲣ̄ϣⲡⲏⲣⲉ ⲙ̄ⲙⲟⲟⲩ.</p>
+			<p>ⲁⲩⲱ ϫⲉ ϫⲓⲛⲉⲛⲉϩⲟⲟⲩ ⲛ̄ⲁⲇⲁⲙ ⲙⲛ̄ⲉⲛⲱⲭ, ⲁ-ⲡⲛⲟⲩⲧⲉ ⲣ̄ϣⲟⲣⲡ ⲛ̄ϯⲧⲩⲡⲟⲥ ⲥⲭⲉⲇⲱⲛ ⲧⲁⲭⲏ ⲉⲡⲙⲩⲥⲧⲏⲣⲓⲟⲛ ⲙ̄ⲡⲉⲭ︤ⲥ︥ ⲙⲛ̄ⲧⲉⲕⲕⲗⲏⲥⲓⲁ ⲉⲧⲟⲩⲁⲁⲃ ϩⲓⲧⲛ̄ⲛⲓⲥϩⲁⲓ ⲛⲁⲓ ⲛ̄ϩⲉⲗⲗⲏⲛⲓⲕⲟⲛ, ⲁⲩⲱ ⲁϥⲕⲁⲁⲩ ⲉϩⲣⲁⲓ ⲉⲩⲥⲱⲧⲏⲣⲓⲁ ⲛⲁⲛ, ⲁⲛⲟⲛ ⲛ̄ϩⲉⲑⲛⲟⲥ ⲛ̄ⲧⲁⲩⲡⲓⲥⲧⲉⲩⲉ ⲉⲡⲉⲭ︤ⲥ︥, ⲡⲁⲓ ⲉⲧϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ ⲁⲛⲟⲕ ⲡⲉ ⲁⲗⲫⲁ ⲁⲩⲱ ⲱ.</p>
+			<p>ⲕⲉⲧⲟⲓ ⲅⲉ ϩⲁⲧϩⲏ ⲛ̄ϯⲁⲡⲟⲇⲉⲝⲓⲥ ⲧⲁⲓ ⲟⲩⲁⲛⲁⲅⲕⲁⲓⲟⲛ ⲛⲁⲛ ⲡⲉ ⲉⲧⲣⲉⲛϫⲱ ⲛ̄ⲧϩⲉⲣⲙⲏⲛⲓⲁ ⲙ̄ⲡϣⲱϫⲡ ⲛ̄ⲛⲉⲛⲍⲏⲧⲉⲙⲁ ⲛⲁⲓ ⲛ̄ⲧⲁⲩⲙⲩⲥⲧⲁⲅⲱⲅⲓ ⲛⲙ̄ⲙⲟⲛ ⲛ̄ϩⲏⲧⲟⲩ ⲉⲧⲃⲉⲙ̄ⲙⲩⲥⲧⲏⲣⲓⲟⲛ ⲉⲧϣⲟⲟⲡ ϩⲙ̄ⲡⲁⲗⲫⲁⲃⲏⲧⲁ, ⲥⲉⲙⲟⲩⲧⲉ ⲅⲁⲣ ⲉⲣⲟⲟⲩ ϫⲉ ⲥⲧⲟⲓⲭⲓⲟⲛ ⲉⲧⲉⲡⲟⲩⲁ ⲡⲟⲩⲁ ⲛ̄ⲛⲉⲥϩⲁⲓ ⲡⲉ ⲉⲧⲡⲓⲧⲣⲟⲡⲟⲥ ⲡⲁⲓ ⲧⲉⲛⲟⲩ ⲁⲛⲣ̄ϣⲟⲣⲡ ϫⲟⲟϥ.</p>
+			<h3>ϩⲟⲙⲟⲓⲱⲥ ⲕⲉⲫⲁⲗⲁⲓⲟⲛ ⲅ̅</h3>
+			<p>ϫⲟⲩⲧⲥⲛⲟⲟⲩⲥ ⲇⲉ ⲛ̄ⲥϩⲁⲓ ⲛⲉⲧⲛ̄ϩⲏⲧⲟⲩ ⲭⲱⲣⲓⲥ ⲡⲉⲝⲓ ⲙⲛ̄ⲡⲉⲯⲓ ⲛⲁⲓ ⲛ̄ⲧⲁ-ⲛⲉⲫⲓⲗⲟⲥⲫⲟⲥ ⲟⲩⲁϩⲟⲩ ⲉⲣⲟⲟⲩ ⲡϩⲁⲉ ⲁⲩⲱ ⲛⲁⲓ ⲛ̄ⲧⲉⲓⲙⲓⲛⲉ ⲉⲓϣⲁϫⲉ ⲉⲡⲓϫⲟⲩⲧⲥⲛⲟⲟⲩⲥ ⲛ̄ⲥϩⲁⲓ ⲥⲉⲥⲩⲙⲫⲱⲛⲉⲓ ⲟⲛ ⲙⲛ̄ⲡⲁⲣⲓⲑⲙⲟⲥ ⲙ̄ⲡⲓϫⲟⲩⲧⲥⲛⲟⲟⲩⲥ ⲛ̄ϩⲱⲃ ⲛ̄ⲧⲁ-ⲡⲛⲟⲩⲧⲉ ⲧⲁⲙⲓⲟⲟⲩ ϩⲛ̄ⲧⲉⲕⲧⲏⲥⲓⲥ ⲉⲧⲉⲛⲁⲓ ⲛⲉ.</p>
+			<p></p>
 			<p></p>
 			<p></p>
 		</div>
@@ -66,7 +86,18 @@
 			<p>Voici que le Maître, qui n'a pas besoin d'enseignement, nous a instruit au sujet de ce mystère, caché jusqu'à cet âge, des lettres de l'alphabet. Il parla ainsi.</p>
 			<h3>Une parole de Dieu.</h3>
 			<p>On donne à ces lettres le nom d'éléments, <span class="greek"></span> non pas, parce qu'elles ne sont (elles-mêmes) composés d'aucun élément (1), comme l'ont pensé les sages de la Grèce [dans leur vanité, loin de là!]; mais parce que, dans leur tracé, se trouve figurée la forme des éléments du monde créé.</p>
-			<p>L'une de ces lettres renferme l'image du ciel et de la terre; une autre est écrite pour figurer la terre et le ciel, une autre pour figurer la terre et l'eau, une autre pour représenter les abîmes (les <i>noun</i>) et les ténèbres, une autre pour représenter le vent et l'eau;</p>
+			<p>L'une de ces lettres renferme l'image du ciel et de la terre; une autre est écrite pour figurer la terre et le ciel, une autre pour figurer la terre et l'eau, une autre pour représenter les abîmes (les <i>noun</i>) et les ténèbres, une autre pour représenter le vent et l'eau; une autre symbolise la lumière; une autre figure le firmament du ciel; une autre fait connaître la séparation des eaux supérieures et des eaux inférieures; une autre figure la formation de la terre et le rassemblement des eaux en un même endroit (1).</p>
+			<p>Une autre, de nouveau, est la figure des plantes; une autre est la figure des arbres fruitiers; une autre représente la lumière des astres; dans une autre on trouve le signe du soliel et de la lune; une autre, de nouveau, est l'image de leur place dans le ciel. C'est ce que nous allons montrer aussitôt, par la volonté de Dieu, d'après ce que nous avons vu et entendu par l'intervention de Dieu lui-même.</p>
+			<h3>Chapitre II.</h3>
+			<p>Voici ce mystère. Dieu a voulu, dans sa providence, se servir de l'écriture des lettres grecques, avant l'idolâtrie des peuples, pour les forcer malgré eux, à se soumettre à son culte et à en faire la confession. Car le Grec, l'athée et l'idolâtre, lorsqu'il trace de sa main la figure de ces lettres, — même sans le vouloir et sans y consentir, —reconnaît et écrit de fait (1) que le monde n'existe pas indépendamment d'un Dieu et d'un créateur, comme l'ont pensé et prétendu les athées de la Grèce; mais que Dieu existe et qu'il est dès le principe, auteur du ciel, et de la terre, et de la mer, et de toutes les créatures visibles et invisibles; que la terre était invisible et informe; et qu'elle est vraie la divine écriture de Moïse où il est dit que les ténèbres étaient sur l'abîme; et que le souffle <span class="greek"></span> de Dieu allait et venait sur les eaux; et que l'auteur <span class="greek"></span> de la lumière est Dieu; et qu'il sépara les ténèbres de la lumière et que, sur son ordre, la terre émergea au-dessus de l'eau.</p>
+			<p>Mais pourquoi parler des créatures? [Il ne s'agit] pas, en effet, de celles-là seulement (1), mais aussi de celui qui les a toutes créées, du Christ qui a dit: Je suis l'alpha et l'oméga.</p>
+			<p>Dans cet alphabet, chose qu'on a considérée comme peu importante, se trouvait le mystère caché depuis le commencement du monde; le nombre (2) dont il renferme la figure, nous enseigne la descente de Dieu le Verbe, du ciel sur la terre, ainsi que le temps où il viendrait jusqu'à nous et la fondation de son Église. Il s'agit de rappeler en outre (1) qu'il a souffert pour notre salut sur la croix; que par lui nous avons été justifiés et sanctifiés; que non seulement ceux qui sont sur la terre ont été rétablis par la grâce, mais que même ceux qui sont dans l'enfer ont bénéficié de la présence du Christ; qu'il est allé porter sa parole à ceux qui étaient détenus dans ce lieu (2); de plus, qu'il est ressuscité des morts, est monté aux cieux et nous a envoyé l'esprit paraclet; que l'Évangile est prêché dans le monde entier, et qu'il demeurera jusqu'à la fin (3).</p>
+			<p>Ce trésor renfermé dans chacune des lettres nous enseigne que le Christ est une chose double <span class="greek"></span>, à savoir, Dieu et homme à la fois, étant l'un et l'autre (4); qu'il se trouve signifié par l'épisimon; qu'il est vivant et vivifiant; qu'il est bon; qu'il est le seigneur, le vrai ecclésiaste qui réunit les fidèles dans l'Église sainte; qu'il est immortel et éternel; qu'il est la force, le secours, la lumière et la vérité; qu'il est la sainteté et le gardien de l'univers; qu'il est le commencement et le sommet, le vrai législateur et tout ce qui est beau et bon. De même, nous avons été instruits au sujet de la Trinité, par l'enseignement étonnant que contiennent ces lettres merveilleuses.</p>
+			<p>Et [nous avons appris] que, depuis les jours d'Adam et d'Enoch, Dieu commença aussitôt à nous signifier le mystère du Christ et de l'Église sainte, par ces lettres grecques; il nous les a proposées pour notre salut, à nous les nations croyant au Christ qui a dit: Je suis l'alpha et l'oméga.</p>
+			<p>Or donc, avant cette démonstration, il nous faut donner l'explication de la suite des secrets qui nous ont été révélés au sujet des mystères contenus dans l'alphabet (1). — Chacune de ces lettres est appelée un élément <span class="greek"></span>, comme nous venons maintenant de le dire (2).</p>
+			<h3>Chapitre III.</h3>
+			<p>Les lettres sont au nombre de vingt-deux, non compris le <span class="greek"></span> et le <span class="greek"></span>, que les philosophes y ont ajoutés dans la suite. Or ces vingt-deux lettres répondent au nombre des vingt-deux œuvres que Dieu a produites dans la création, à savior (1):</p>
+			<p></p>
 			<p></p>
 			<p></p>
 		</div>
