--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -363,7 +363,7 @@
 						<li><div class="cell"></div><div class="cell"><span class="abbr">Ryl</span> = <i>Catal. of Coptic MSS. in John Rylands Library</i>, 1909, acc. to numbers; RylSuppl = MSS. acquired since publication of catalogue (<i>cf</i> Ryl <i>Bull.</i> 5).</div></li>
 						<li class="non-source"><i class="dialect">S</i> = Saʿîdic dialect; <i class="dialect">S<sup>a</sup></i> Saʿîdic with Achmîmic tendency (mostly Theban), <i class="dialect">S<sup>f</sup></i> with Fayyûmic tendency.</li>
 						<li class="bible"><span class="abbr">Sa</span> = Wisdom of Solomon.</li>
-						<li><div class="cell"></div><div class="cell"><span class="abbr">Salîb</span> = <i>Kitâb aṣ-Ṣalîb</i>, Cairo, 1921.</div></li>
+						<li><div class="cell"><a href="https://digitale-sammlungen.ulb.uni-bonn.de/content/titleinfo/3198124" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Salîb</span> = <i>Kitâb aṣ-Ṣalîb</i>, Cairo, 1921.</div></li>
 						<li><div class="cell"></div><div class="cell"><span class="abbr">Saq</span> = Coptic texts ed. by H. Thompson in Quibell's <i>Excavations at Saqqara</i>, 1909, 1912.</div></li>
 						<li><div class="cell"><a href="https://archive.org/details/koptischegrammat00stei_1" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Sdff</span> = G. Steindorff, <i>Koptische Grammatik</i><sup class="footnote">2</sup>, acc. to §§, or information from him.</div></li>
 						<li class="non-source"><span class="abbr"><i>s f</i></span> = <i>sub fine</i>.</li>
@@ -385,11 +385,11 @@
 						<li><div class="cell"><a href="https://archive.org/details/p1synaxariumalex01copt" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Synax</span> = <i>Synaxarium Alexandrinum</i>, ed. J. Forget (<i>CSCO.</i>), 1905, 1912.</div></li>
 						<li><div class="cell"><a href="https://archive.org/details/lexicongyptiacol00tatt" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Tatt</span> = H. Tattam, <i>Lexicon Aegyptiaco-Latinum</i>, 1835.</div></li>
 						<li><div class="cell"><a href="https://digitale-sammlungen.ulb.uni-bonn.de/content/titleinfo/244155" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">TDi</span> = Tuki, <i>Diurnum Alexandrinum</i>, 1750.</div></li>
-						<li><div class="cell"></div><div class="cell"><span class="abbr">TEuch</span> = do., <i>Pontificale et Euchologium</i>, 1761.</div></li>
+						<li><div class="cell"><a href="https://digitale-sammlungen.ulb.uni-bonn.de/content/titleinfo/48571" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">TEuch</span> = do., <i>Pontificale et Euchologium</i>, 1761.</div></li>
 						<li class="bible"><span class="abbr">Thes</span> = Epistles to Thessalonians.</li>
 						<li class="bible"><span class="abbr">Ti</span> = Epistle to Titus.</li>
 						<li><div class="cell"><a href="https://archive.org/details/achmmischkoptisc0000till" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Till</span> = W. Till, <i>Achmîmisch-Kopt. Grammatik</i>, 1928, acc. to §§.</div></li>
-						<li><div class="cell"></div><div class="cell"><span class="abbr">— Bau</span> = <i>Eine Kopt. Bauernpraktik</i> (Mitt. d. deut. Inst. Kairo, vi, 1936).</div></li>
+						<li><div class="cell"><a href="https://dn790006.ca.archive.org/0/items/egyptology-archive-vol.-6-1935/EGYPTOLOGY%20ARCHIVE%20Vol.%206%20%281935%29.pdf" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">— Bau</span> = <i>Eine Kopt. Bauernpraktik</i> (Mitt. d. deut. Inst. Kairo, vi, 1936).</div></li>
 						<li><div class="cell"></div><div class="cell"><span class="abbr">— Oster</span> = <i>Osterbrief u. Predigt in achm. Dialekt</i>, Vienna, 1931 (at first as Vi 10157).</div></li>
 						<li class="bible"><span class="abbr">Tim</span> = Epistles to Timothy.</li>
 						<li class="bible"><span class="abbr">Tob</span> = Tobit.</li>
