--- a/maltese/aquilina/index.html
+++ b/maltese/aquilina/index.html
@@ -154,5 +154,9 @@
 		<p>AN INTRODUCTION TO WORD STRUCTURE</p>
 		<p>Before we proceed further with grammar, it is important to understand the structural mechanism of Maltese Morphology. Most words consist of three, less frequently of two or four and rarely of five consonants forming a base called the Root which can be shown by the symbol <em>√</em>, each consonant of which is known as a radical.</p>
 		<p>Various forms are obtained by the correlation of these roots to a number of variable vowels or vocalic sequences. The following example illustrates this principle of Semitic word-mechanism. The three unvowelled consonants <em>N-Ż-L</em> do not convey a specific meaning, but they are connected with, and therefore suggest, the general idea of 'descending' which ceases to be vague and general as soon as the three consonants are related to the right vocalic sequence, or the appropriate vowel, as the case may be. One can therefore say that meaning is the joint product of the Consonantal Roots + Vocalic Sequence or + one particular vowel, as the case may be.</p>
+		<p>The three radicals <em>N-Ż-L</em> can be related to various vocalic sequences or vowels. These vowels sometimes with affixes define the word-meaning with reference to the complete identity of the object, animate or inanimate noun, its quality (adjective), action (verb) time and person connected with an action or state of being or the manner in which such action is carried out (adverb) and other grammatical modalities, which form the subject-matter of the third section of this book. Here are some examples of the derived forms:</p>
+		<p><em>√N-Ż-L</em></p>
+		<p>Exx.</p>
+		<p><em>NiŻeL</em> 'he descended' (the original verbal pattern i.e. the Base or Root-Word); <em>√</em></p>
 	</body>
 </html>
