--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -174,7 +174,7 @@
 						<li class="non-source"><span class="abbr">gen</span> = genitive.</li>
 						<li><div class="cell"><a href="https://books.google.com/books/about/Aug_Ant_Georgii_Fragmentum_Evangelii_S_I.html?id=eGFAAAAAcAAJ" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">GFr</span> = Georgi, <i>Fragm. Evang. S. Iohannis</i>, 1789.</div></li>
 						<li class="non-source"><span class="abbr">Gk</span> = Greek.</li>
-						<li><div class="cell"></div><div class="cell"><span class="abbr">Glos</span> = Greek-Coptic Glossary, ed. Bell &amp; Crum, in <i>Aegyptus</i> vi 179, acc. to lines.</div></li>
+						<li><div class="cell"><a href="https://babel.hathitrust.org/cgi/pt?id=mdp.39015039283943&seq=203" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Glos</span> = Greek-Coptic Glossary, ed. Bell &amp; Crum, in <i>Aegyptus</i> vi 179, acc. to lines.</div></li>
 						<li><div class="cell"><a href="https://archive.org/details/bub_gb_FLw7D7xionYC" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">GMir</span> = Georgi, <i>Miracula S. Coluthi</i>, 1793.</div></li>
 						<li><div class="cell"></div><div class="cell"><span class="abbr">GöttA</span> = Göttinger <i>Abhandlungen</i>; GöttN = do. <i>Nachrichten</i>.</div></li>
 						<li><div class="cell"><a href="https://babel.hathitrust.org/cgi/pt?id=mdp.39015035904419" class="source" target="_blank"></a></div><div class="cell"> <span class="abbr">GPar</span> = S. Gaselee. <i>Parerga Coptica</i>, 1912, 1914.</div></li>
@@ -309,7 +309,7 @@
 						<li class="non-source"><span class="abbr">p c</span> = conjunctive participle.</li>
 						<li><div class="cell"></div><div class="cell"><span class="abbr">PCai</span> = <i>Papyrus grecs d'époque byzantine</i>, ed. J. Maspero (Catal. Gén. Musée du Caire, 1911 ff.).</div></li>
 						<li><div class="cell"></div><div class="cell"><span class="abbr">PChass</span> = Two medical papyri <i>penes</i> E. Chassinat.</div></li>
-						<li><div class="cell"></div><div class="cell"><span class="abbr">Pcod</span> = <i>Papyruscodex saec. vi–vii…Cheltenham</i>, ed. Crum, 1915, acc. to pp. of printed book.</div></li>
+						<li><div class="cell"><a href="https://archive.org/details/derpapyruscodexs00crum" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Pcod</span> = <i>Papyruscodex saec. vi–vii…Cheltenham</i>, ed. Crum, 1915, acc. to pp. of printed book.</div></li>
 						<li><div class="cell"></div><div class="cell"><span class="abbr">PcodF</span> = fayyûmic text of same, ed. W. Erichsen (Danish Acad., 1932).</div></li>
 						<li><div class="cell"></div><div class="cell"><span class="abbr">PcodMor</span> = Mr. Pierpont Morgan's papyrus volume of Psalms &amp;c. (H. Thompson's copy).</div></li>
 						<li><div class="cell"></div><div class="cell"><span class="abbr">PCol</span> = Papyri at Columbia University, New York (A. Schiller's copies).</div></li>
