--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -1737,6 +1737,51 @@
 														<li>Lu 23 8 <i class="dialect">S</i> (<i class="dialect">B</i> <span class="coptic">ⲙ.</span>) <span class="greek">ἱκανός</span>;</li>
 													</ul>
 												</li>
+												<li class="subsection">
+													<ul>
+														<li>Sa 17 2 <i class="dialect">S</i> <span class="greek">μακρός</span>,</li>
+														<li>Is 53 10 <i class="dialect">S</i> (<i class="dialect">B</i> om) <span class="greek">μακρόβιος</span>,</li>
+														<li>Eccl 7 9 <i class="dialect">F</i> <span class="coptic">ⲛϩⲏⲧ</span> (<i class="dialect">S</i> <span class="coptic">ϩⲁⲣϣ ϩ.</span>) <span class="greek">μακρόθυμος</span>,</li>
+														<li><i>cf</i> 1 Cor 9 12 <i class="dialect">F</i> <span class="coptic">ⲁⲓ ⲛⲛ. ⲛϩⲏⲧ</span>;</li>
+													</ul>
+												</li>
+												<li class="subsection">
+													<ul>
+														<li>Ps 49 3 <i class="dialect">S</i> (<i class="dialect">B</i> <span class="coptic">ⲉⲙⲁϣⲱ</span>) <span class="greek">σφόδρα</span>;</li>
+													</ul>
+												</li>
+												<li class="subsection">approx transl:
+													<ul>
+														<li>Ps 138 22 <i class="dialect">S</i> (<i class="dialect">B</i> <span class="coptic">ϫⲏⲕ</span>) <span class="greek">τέλειος</span>,</li>
+														<li>Sa 13 14 <i class="dialect">S</i> <span class="greek">ἄγριος</span>,</li>
+														<li><i>ib</i> 16 11 <i class="dialect">S</i> <span class="greek">βαθύς</span>,</li>
+														<li><i>ib</i> 10 16 <i class="dialect">S</i> <span class="greek">φοβερός</span>,</li>
+														<li>Mt 9 16 <i class="dialect">S</i> (<i class="dialect">B</i> <span class="coptic">ⲛϩⲟⲩⲟ</span>) <span class="greek">χείρων</span>,</li>
+														<li>Ac 15 2 <i class="dialect">S</i> (<i class="dialect">B</i> as Gk) <span class="greek">οὐκ ὀλίγος</span>,</li>
+														<li>Ap 18 17 <i class="dialect">S</i><i class="dialect">B</i> <span class="greek">τοσοῦτος</span>,</li>
+														<li>Jos 10 2 <i class="dialect">S</i> <span class="coptic">ⲛ. ⲙⲡⲟⲗⲓⲥ</span> <span class="greek">μητρόπολις</span>,</li>
+														<li>CDan 84 <i class="dialect">B</i> <span class="coptic">ⲛ. ⲛⲓⲱⲧ</span> of Shiet <span class="greek">ἡγούμενος</span>,</li>
+														<li>BMar 189 <i class="dialect">S</i> <span class="coptic">ⲛ. ⲛⲛⲉⲉϥ</span> <span class="greek">ναύκληρος</span>,</li>
+														<li>Va 57 10 <i class="dialect">B</i> <span class="coptic">ⲛ. ⲛⲟⲥⲓ</span> <span class="greek">ἄφατος</span>,</li>
+														<li>MR 4 128 <i class="dialect">S</i> <span class="coptic">ⲛⲁϫ ⲛⲟⲃϩⲉ</span> <span class="greek">ὀδούς</span>,</li>
+														<li>Glos 358 <i class="dialect">S</i> <span class="coptic">ⲛ. ⲛⲁⲡⲟⲧ</span> · <span class="greek">θηρίκλειον</span>,</li>
+														<li><i>ib</i> 406 <i class="dialect">S</i> <span class="coptic">ⲛ. ⲛⲧϥⲧ</span> · <span class="greek">ἰχθύς</span>;</li>
+													</ul>
+												</li>
+												<li class="subsection">
+													<ul>
+														<li>PGM 1 60<sup>635</sup> <i class="dialect">O</i> <span class="coptic">ⲧ]ⲛⲓϩⲧⲏ ⲛⲥⲁⲧⲏ</span>,</li>
+														<li>Br 135 <i class="dialect">S</i> <span class="coptic">ⲡⲙⲉϩⲃ̅ ⲛⲛ. ⲛⲁϩⲟⲣⲁⲧⲟⲥ</span>,</li>
+														<li>El 7 6 <i class="dialect">A</i> <span class="coptic">ⲟⲩⲛ. ⲛⲑⲁⲗⲁⲥⲥⲁ</span>,</li>
+														<li>BSM 42 <i class="dialect">B</i> <span class="coptic">ⲟⲩⲛⲟϫ ⲙⲫⲣⲏϣ</span> = BMis 388 <i class="dialect">S</i>,</li>
+														<li>C 86 128 <i class="dialect">B</i> <span class="coptic">ⲟⲩⲛⲟϫ ⲛⲣⲁϣⲓ</span>,</li>
+														<li>CO 196 <i class="dialect">S<sup>a</sup></i> <span class="coptic">ⲟⲩⲛⲁⲕ ⲛϣⲱⲛⲉ</span>,</li>
+														<li>Miss 4 181 <i class="dialect">B</i> <span class="coptic">ⲟⲩⲛ. ⲛⲥⲙⲏ</span> (var C 41 79 <span class="coptic">ⲥ. ⲉⲥⲛⲁϣⲧ</span>),</li>
+														<li>Kr 22 <i class="dialect">F</i> <span class="coptic">ⲡⲁⲧⲛⲁϫ (ⲛ)ⲉⲕ(ⲕ)ⲗⲏ(ⲥⲓⲁ)</span>,</li>
+														<li>BM 346 112 <i class="dialect">S</i> <span class="coptic">ⲡⲛ. ⲙⲙⲁⲧⲟⲓ</span> of the legion,</li>
+														<li>Hall 86 <i class="dialect">S</i> have pity for <span class="coptic">ⲟⲩⲛ. ⲛϩⲏⲕⲉⲡⲉ</span> <i>is very poor</i>,</li>
+													</ul>
+												</li>
 											</ul>
 										</li>
 									</ul>
