--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -176,15 +176,15 @@
 						<li class="non-source"><span class="abbr">Gk</span> = Greek.</li>
 						<li><div class="cell"><a href="https://babel.hathitrust.org/cgi/pt?id=mdp.39015039283943&seq=203" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Glos</span> = Greek-Coptic Glossary, ed. Bell &amp; Crum, in <i>Aegyptus</i> vi 179, acc. to lines.</div></li>
 						<li><div class="cell"><a href="https://archive.org/details/bub_gb_FLw7D7xionYC" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">GMir</span> = Georgi, <i>Miracula S. Coluthi</i>, 1793.</div></li>
-						<li><div class="cell"></div><div class="cell"><span class="abbr">GöttA</span> = Göttinger <i>Abhandlungen</i>; GöttN = do. <i>Nachrichten</i>.</div></li>
+						<li><div class="cell"><a href="https://babel.hathitrust.org/cgi/pt?id=nyp.33433081842092" class="source" target="_blank"></a>?<a href="https://books.google.com/books?vid=NYPL:33433081842092" class="source" target="_blank"></a>?</div><div class="cell"><span class="abbr">GöttA</span> = Göttinger <i>Abhandlungen</i>; GöttN = do. <i>Nachrichten</i>.</div></li>
 						<li><div class="cell"><a href="https://babel.hathitrust.org/cgi/pt?id=mdp.39015035904419" class="source" target="_blank"></a></div><div class="cell"> <span class="abbr">GPar</span> = S. Gaselee. <i>Parerga Coptica</i>, 1912, 1914.</div></li>
-						<li><div class="cell"></div><div class="cell"><span class="abbr">GriffStu</span> = <i>Studies Presented to F. Ll. Griffith</i>, 1932.</div></li>
+						<li><div class="cell"><a href="https://dirzon.com/file/telegram/en_ancientmediterraneanresources/studies_presented_to_f_ll_griffith.pdf" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">GriffStu</span> = <i>Studies Presented to F. Ll. Griffith</i>, 1932.</div></li>
 						<li><div class="cell"></div><div class="cell"><span class="abbr">Gu</span> = I. Guidi, <i>Frammenti Copti</i> I–VII (from ALR 1887 ff.), acc. to continuous pagination.</div></li>
 						<li><div class="cell"><a href="https://archive.org/details/testiorientalii01guidgoog" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">GuDorm</span> = I. Guidi, <i>Teste…sopra i Sette Dormienti</i> (Mem. Acad. Linc., 1884).</div></li>
 						<li><div class="cell"><a href="https://archive.org/details/copticversionofn01horn" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">H</span> = G. Horner's text of N.T., 1898–1924.</div></li>
 						<li class="bible"><span class="abbr">Hab</span> = Habakkuk.</li>
 						<li class="bible"><span class="abbr">Hag</span> = Haggai.</li>
-						<li><div class="cell"></div><div class="cell"><span class="abbr">Hall</span> = H. R. Hall, <i>Coptic &amp; Greek Texts…Brit. Museum</i>, 1905, acc. to pp.</div></li>
+						<li><div class="cell"><a href="https://archive.org/details/mdp.39015020865567" class="source" target="_blank"></a><a href="https://babel.hathitrust.org/cgi/pt?id=mdp.39015020865567" class="source" target="_blank"></a><a href="https://books.google.com/books?vid=UOM:39015020865567" class="source" target="_blank"></a><a href="https://www.scribd.com/document/265835328/Hall-Coptic-and-Greek-Texts-of-the-Christian-from-Ostraka-Stelae-etc-in-the-British-Museum" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Hall</span> = H. R. Hall, <i>Coptic &amp; Greek Texts…Brit. Museum</i>, 1905, acc. to pp.</div></li>
 						<li><div class="cell"><a href="https://archive.org/details/serviceforconsec00hornuoft" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">HCons</span> = G. Horner, <i>Consecration of Church &amp; Altar</i>, 1902.</div></li>
 						<li class="bible"><span class="abbr">He</span> = Epistle to Hebrews.</li>
 						<li><div class="cell"></div><div class="cell"><span class="abbr">HengB</span> = W. Hengstenberg in <i>Beiträge z. Forschung…</i> Heft III, J. Rosenthal, München, 1914.</div></li>
@@ -203,7 +203,7 @@
 						<li class="bible"><span class="abbr">Is</span> = Isaiah.</li>
 						<li><div class="cell"><a href="https://archive.org/details/koptischerechtsu00crum" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">J</span> = Crum &amp; Steindorff, <i>Kopt. Rechtsurkunden…aus Djême</i>, acc. to no. &amp; line; JLeip = two such papyri in Leipzig University, Aegyptologisches Institut (<i>cf</i> below).</div></li>
 						<li class="bible"><span class="abbr">Ja</span> = Epistle of James.</li>
-						<li><div class="cell"></div><div class="cell"><span class="abbr">JA</span> = <i>Journal Asiatique</i>, acc. to year, vol. &amp; page.</div></li>
+						<li><div class="cell"><a href="https://fr.wikisource.org/wiki/Journal_asiatique" class="source" target="_blank"></a>?</div><div class="cell"><span class="abbr">JA</span> = <i>Journal Asiatique</i>, acc. to year, vol. &amp; page.</div></li>
 						<li><div class="cell"><a href="https://archive.org/details/jewschristiansin0000bell" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">J&amp;C</span> = H. I. Bell, <i>Jews &amp; Christians</i>, 1924, acc. to pp.</div></li>
 						<li><div class="cell"></div><div class="cell"><span class="abbr">JAOS</span> = <i>Journ. of American Orient. Soc.</i></div></li>
 						<li class="bible"><span class="abbr">Jer</span> = Jeremiah.</li>
@@ -341,7 +341,7 @@
 						<li class="non-source"><span class="abbr">pron</span> = pronoun.</li>
 						<li><div class="cell"><a href="https://archive.org/details/pistissophia0000unse" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">PS</span> = <i>Pistis Sophia</i>, ed. C. Schmidt (= <i>Coptica</i> II), 1925.</div></li>
 						<li class="bible"><span class="abbr">Ps</span> = Psalms, acc. to the LXX numeration.</li>
-						<li><div class="cell"></div><div class="cell"><span class="abbr">PSBA</span> = <i>Proceedings of Soc. of Biblical Archaeology</i>.</div></li>
+						<li><div class="cell"><a href="http://archives.getty.edu:30008/getty_images/digitalresources/serials/103990.html" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">PSBA</span> = <i>Proceedings of Soc. of Biblical Archaeology</i>.</div></li>
 						<li><div class="cell"></div><div class="cell"><span class="abbr">PStras</span> = Papyri in University Library, Strassburg (Crum's copies, 1912).</div></li>
 						<li><div class="cell"></div><div class="cell"><span class="abbr">PVi</span> = Papyri in Staatsbibliothek, Vienna (Till's copies).</div></li>
 						<li class="non-source"><span class="abbr">qual</span> = qualitative of verb; also indicated by <span class="abbr">†</span>.</li>
