update vycichl and home page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<h1>Randy Komforty</h1>
-		<h2>Coptic Studies</h2>
+		<h1>ϫⲉⲙⲛⲟⲙϯ</h1>
+		<div>
+			<h2>ϫⲱⲱⲙⲉ</h2>
+			<ul>
+				<li><a href="./coptic/crum/index.html">Crum, <i>A Coptic Dictionary</i></a></li>
+				<li><a href="./coptic/vycichl/index.html">Vycichl, <i>Dictionnaire Étymologique de la Langue Copte</i></a></li>
+				<li><a href="./coptic/mallon/index.html">Mallon, <i>Grammaire Copte</i></a></li>
+				<li><a href="./coptic/westendorf/index.html">Westendorf, <i>Koptisches Handwörterbuch</i></a></li>
+				<li><a href="./coptic/lambdin/index.html">Lambdin, <i>Introduction to Sahidic Coptic</i></a></li>
+				<li><a href="./coptic/layton/index.html">Layton, <i>A Coptic Grammar</i></a></li>
+			</ul>
+		</div>
+		<div>
+			<h2>ⲛ̄ⲃⲓⲟⲥ ⲛ̄ⲙ̄ⲡⲉⲧⲟⲩⲁⲁⲃ</h2>
+			<ul>
+				<li><a href="./coptic/"></a></li>
+			</ul>
+		</div>
 		<br>
 		<br>
 		<p>Contact:</p>
