--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -345,7 +345,7 @@
 						<li><div class="cell"></div><div class="cell"><span class="abbr">PStras</span> = Papyri in University Library, Strassburg (Crum's copies, 1912).</div></li>
 						<li><div class="cell"></div><div class="cell"><span class="abbr">PVi</span> = Papyri in Staatsbibliothek, Vienna (Till's copies).</div></li>
 						<li class="non-source"><span class="abbr">qual</span> = qualitative of verb; also indicated by <span class="abbr">†</span>.</li>
-						<li><div class="cell"></div><div class="cell"><span class="abbr">R</span> = <i>I Papiri Copti…di Torino</i>, ed. F. Rossi, acc. to volume, fascicule &amp; page.</div></li>
+						<li><div class="cell"><a href="https://babel.hathitrust.org/cgi/pt?id=nyp.33433081881066&seq=11" class="source" target="_blank"></a><a href="https://babel.hathitrust.org/cgi/pt?id=nyp.33433081881074&seq=11" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">R</span> = <i>I Papiri Copti…di Torino</i>, ed. F. Rossi, acc. to volume, fascicule &amp; page.</div></li>
 						<li><div class="cell"><a href="https://archive.org/details/umn.319510016716448" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">RAC</span> = E. Revillout, <i>Actes et Contrats…de Boulaq et du Louvre</i>, 1876.</div></li>
 						<li><div class="cell"></div><div class="cell"><span class="abbr">RAl</span> = F. Rossi, <i>Alcuni MSS. Copti…di Torino</i> (= Memorie…Torino, ser. ii, tom. xliii), acc. to pp. of separate publication.</div></li>
 						<li><div class="cell"><a href="https://archive.org/details/in.ernet.dli.2015.291952" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">RChamp</span> = <i>Recueil d'Études…J. F. Champollion</i>, 1922.</div></li>
@@ -1810,107 +1810,171 @@
 														</li>
 													</ul>
 												</li>
+												<li class="subsection"><span class="coptic">ⲛ. ⲛⲣⲱⲙⲉ</span> <i class="dialect">S</i><i class="dialect">B</i><i class="dialect">F</i>
+													<ul>
+														<li class="subsection"><b>a</b>, <i>grown</i> or <i>old man</i> opp youth:
+															<ul>
+																<li class="group">
+																	<ul>
+																		<li>ShC 42 207 <i class="dialect">S</i> <span class="coptic">ⲛ. ⲛⲣ.</span> opp <span class="coptic">ϣⲏⲣⲉ ϣⲏⲙ</span>,</li>
+																		<li><i>ib</i> 199 sim,</li>
+																		<li>BHom 122 <i class="dialect">S</i> youth &amp; elder <span class="coptic">ⲃⲣⲣⲉ ϩⲓⲛ. ⲛⲣ.</span>,</li>
+																		<li>Bor 134 4 <i class="dialect">S</i> (Vita Sinuth) <span class="coptic">ⲁϥⲣ ⲛ. ⲛⲣ.</span> = C 41 34 <i class="dialect">B</i> <span class="coptic">ⲉⲣ ϧⲉⲗⲗⲟ ⲛⲣ.</span>,</li>
+																		<li>MG 25 256 <i class="dialect">B</i> was actor by trade <span class="coptic">ϣⲁⲧⲉϥⲉⲣ ⲛ. ⲛⲣ.</span></li>
+																	</ul>
+																</li>
+															</ul>
+														</li>
+														<li class="subsection"><b>b</b>, as title, <i>elder</i>, <i>notable</i> (<i>v</i> CO 119 n, Ep 1 131):
+															<ul>
+																<li class="group">
+																	<ul>
+																		<li>Est A 1 <i class="dialect">S</i> <span class="greek">ἄνθρωπος μέγ.</span>;</li>
+																	</ul>
+																</li>
+																<li class="group">
+																	<ul>
+																		<li>Ac 13 50 <i class="dialect">S</i> (<i class="dialect">B</i> <span class="coptic">ϩⲟⲩⲁϯ</span>) <span class="greek">πρῶτος</span>;</li>
+																	</ul>
+																</li>
+																<li class="group">
+																	<ul>
+																		<li>Z 340 <i class="dialect">S</i> <span class="greek">ἀββᾶ</span>;</li>
+																	</ul>
+																</li>
+																<li class="group">
+																	<ul>
+																		<li>Leyd 163 <i class="dialect">S</i> festival of <span class="coptic">ⲡⲛ. ⲛⲣ. ⲙⲛⲡⲇⲉⲩⲧⲉⲗⲁⲣⲓⲟⲥ</span> (<span class="greek">δευτερ.</span>),</li>
+																		<li>Wess 9 79 <i class="dialect">S</i> <span class="coptic">ⲛⲛ. ⲛⲣ.</span> <i>sc</i> archbishops &amp; archimandrites,</li>
+																		<li>BAp 107 <i class="dialect">S</i> <span class="coptic">ⲡⲛ. ⲛⲣ.</span> <i>sc</i> bishop = MIE 2 383 <i class="dialect">B</i> <span class="coptic">ⲡⲓϧⲉⲗⲗⲟ</span>,</li>
+																		<li>Miss 4 245 <i class="dialect">S</i> <span class="coptic">ⲡⲛ. ⲛⲣ.</span> <i>sc</i> Shenoute,</li>
+																		<li>C 41 22 <i class="dialect">B</i> do,</li>
+																		<li>BM 601 <i class="dialect">F</i> <span class="coptic">ⲡⲛ. ⲛⲗ.</span> <i>sc</i> abbot,</li>
+																		<li>RE 9 149 <i class="dialect">S</i> <span class="coptic">ⲛⲛ. ⲛⲣ.</span> opp <span class="coptic">ⲛⲕⲗⲏⲣⲓⲕⲟⲥ</span>,</li>
+																		<li>J 36 35 <i class="dialect">S</i> lashanes &amp; <span class="coptic">ϩⲉⲛⲕⲉⲛ. ⲛⲣ.</span>,</li>
+																		<li>MMA 24 6 4 <i class="dialect">S</i> <span class="coptic">ⲛⲛⲁⲕ ⲛⲣ. ⲙⲡⲧⲓⲙⲉ</span>,</li>
+																		<li>ST 300 <i class="dialect">S</i> sim,</li>
+																		<li>CO 342 <i class="dialect">S</i> <span class="coptic">ⲛⲁⲡⲏⲩⲉ ⲙⲛ(ⲛ)ⲛ. ⲛⲣ.</span>,</li>
+																		<li>Mor 41 19 <i class="dialect">S</i> <span class="coptic">ⲛ. ⲛⲣ.</span> = DeV 2 270 <i class="dialect">B</i> <span class="coptic">ⲣ. ⲛⲣⲁⲙⲁⲟ</span>.</li>
+																		<li>(<i>Cf</i> <span class="greek">μεγάλοι τῆς μονῆς</span> <i>Vita Pachom</i> § 35, <span class="greek">μέγ.</span> of ascetes Usener <i>Theodos.</i> 107, <span class="greek">μέγ. ἀνήρ</span> anchorite PG 42 192, <span class="greek">ὁ μέγ.</span> <i>sc</i> Antony <i>Hist Laus</i> 65).</li>
+																	</ul>
+																</li>
+															</ul>
+														</li>
+														<li class="subsection"><span class="coptic">ⲙⲛⲧⲛ. ⲛⲣ.</span> <i class="dialect">S</i>, <i>old age</i>:
+															<ul>
+																<li class="group">
+																	<ul>
+																		<li>ShC 73 49 <span class="coptic">ⲧⲉⲛⲙ. ⲏ ⲧ(ⲉ)ⲛⲙⲛⲧⲃⲣⲣⲉ</span>,</li>
+																		<li>ShA 1 108 <span class="coptic">ⲧⲉⲛⲙ. ⲏ ⲧⲉⲛϩⲁⲏ</span>,</li>
+																		<li>PSBA 32 200 spare thyself in thy <span class="coptic">ⲙ. ⲛⲣ.</span></li>
+																	</ul>
+																</li>
+															</ul>
+														</li>
+														<li class="subsection"><span class="coptic">ⲛ. ⲛⲥϩⲓⲙⲉ</span> <i class="dialect">S</i>, <i>elder</i>, <i>aged woman</i>:
+															<ul>
+																<li class="group">
+																	<ul>
+																		<li>1 Tim 5 2 (<i class="dialect">B</i> <span class="coptic">ϧⲉⲗⲗⲱ</span>) <span class="greek">πρεσβυτέρα</span>;</li>
+																	</ul>
+																</li>
+																<li class="group">
+																	<ul>
+																		<li>ShC 73 74 <span class="coptic">ⲛ. ⲛⲥ.</span> opp <span class="coptic">ϣⲉⲉⲣⲉ ϣⲏⲙ</span>,</li>
+																		<li><i>ib</i> 62 <span class="coptic">ⲑⲗⲗⲱ</span> (abbess) <span class="coptic">ⲙⲛⲕⲉⲥⲟ ⲛⲛ. ⲛⲥ.</span> that are aged (<i>cf</i> CDan 26 <span class="greek">ἡ μεγάλη</span>).</li>
+																	</ul>
+																</li>
+															</ul>
+														</li>
+														<li class="subsection"><span class="coptic">ⲛ. ⲛϣⲏⲣⲉ</span> <i class="dialect">S</i><i class="dialect">B</i>, <i>elder son</i>:
+															<ul>
+																<li class="group">
+																	<ul>
+																		<li>Lu 15 25 <i class="dialect">S</i><i class="dialect">B</i> <span class="greek">πρεσβύτερος</span>;</li>
+																	</ul>
+																</li>
+																<li class="group">
+																	<ul>
+																		<li>BAp 83 <i class="dialect">S</i> Esau her <span class="coptic">ⲛ. ⲛϣ.</span>,</li>
+																		<li>DeV 2 90 <i class="dialect">B</i> Joachaz <span class="coptic">ⲡⲓⲛ. ⲛϣ.</span> of Josiah;</li>
+																	</ul>
+																</li>
+															</ul>
+														</li>
+														<li class="subsection">as monastic title (<i>cf</i> <span class="coptic">ⲛ. ⲛⲣⲱⲙⲉ</span>, <span class="coptic">ⲛⲥⲟⲛ</span>):
+															<ul>
+																<li class="group">
+																	<ul>
+																		<li>C 41 54 <i class="dialect">B</i> convoked <span class="coptic">ⲛⲓⲛ. ⲛϣ.</span> &amp; superintendants of monastery,</li>
+																		<li>GMaspero <i>Musée Eg.</i> 2 pl 16 <i class="dialect">S</i> saints &amp; rest of <span class="coptic">ⲛⲛ. ⲛϣ.</span> commemorated,</li>
+																		<li>J 39 21 <i class="dialect">S</i> <span class="coptic">ϩⲉⲛⲛ. ⲛϣ.</span> of <i>castrum</i> as umpires,</li>
+																		<li>BP 11937 <i class="dialect">S</i> prior will not act without consulting <span class="coptic">ⲛⲉⲛ. ⲛϣ.</span> of monastery.</li>
+																	</ul>
+																</li>
+															</ul>
+														</li>
+														<li class="subsection"><span class="coptic">ⲛ. ⲛⲥⲟⲛ</span> <i class="dialect">S</i><i class="dialect">B</i>, <i>elder brother</i>:
+															<ul>
+																<li class="group">
+																	<ul>
+																		<li>GE 10 21 <i class="dialect">B</i> <span class="greek">μείζων</span>,</li>
+																		<li>BIF 13 106 <i class="dialect">S</i> <span class="coptic">ⲡⲉϥⲛ. ⲛⲥ.</span>;</li>
+																	</ul>
+																</li>
+															</ul>
+														</li>
+														<li class="subsection">as title (<i>cf</i> <span class="coptic">ⲛ. ⲛⲣⲱⲙⲉ</span>, <span class="coptic">ⲛϣⲏⲣⲉ</span>):
+															<ul>
+																<li class="group">
+																	<ul>
+																		<li>Bodl(P) g 15 <i class="dialect">S</i> rest of <span class="coptic">ⲛⲉⲛ. ⲛⲥⲛⲏ[ⲩ</span>,</li>
+																		<li><i>ib</i> d 20 <i class="dialect">S</i> sim.</li>
+																	</ul>
+																</li>
+															</ul>
+														</li>
+														<li class="subsection"><span class="coptic">ⲛ. ⲛⲥⲱⲛⲉ</span>, <i>elder sister</i>:
+															<ul>
+																<li class="group">
+																	<ul>
+																		<li>Ez 16 46 <i class="dialect">S</i><i class="dialect">B</i> <span class="greek">πρεσβυτέρα</span> opp <span class="coptic">ⲕⲟⲩⲓ ⲛⲥ.</span></li>
+																	</ul>
+																</li>
+															</ul>
+														</li>
+													</ul>
+												</li>
 											</ul>
 										</li>
-										<li class="subsection"><span class="coptic">ⲛ. ⲛⲣⲱⲙⲉ</span> <i class="dialect">S</i><i class="dialect">B</i><i class="dialect">F</i>
+										<li class="subsection"><b>II</b> with 2nd adj intervening <i class="dialect">S</i>:
 											<ul>
-												<li class="subsection"><b>a</b>, <i>grown</i> or <i>old man</i> opp youth:
+												<li class="group">
+													<ul>
+														<li>PS 248 <span class="coptic">ⲛⲉⲓⲛⲟϭ ⲧⲏⲣⲟⲩ ⲛⲁϩⲟⲣⲁⲧⲟⲥ</span>,</li>
+														<li>CA 98 <span class="coptic">ⲛ. ⲛⲓⲙ ⲛⲁⲅⲁⲡⲏ</span>,</li>
+														<li>TT 149 <span class="coptic">ⲛ. ⲥⲛⲁⲩ ⲛⲁⲣⲭⲁⲅⲅⲉⲗⲟⲥ</span> (<i>cf</i> Si 41 12 <span class="coptic">ϣⲟ ⲛⲁϩⲟ ⲛⲛ.</span>, PS 359 <span class="coptic">ϯⲟⲩ ⲛⲛ. ⲛⲁⲣⲭⲟⲛ</span>).</li>
+													</ul>
+												</li>
+												<li class="subsection">Before name, without <span class="coptic">ⲛ-</span> <i class="dialect">S</i><i class="dialect">B</i>:
 													<ul>
 														<li class="group">
 															<ul>
-																<li>ShC 42 207 <i class="dialect">S</i> <span class="coptic">ⲛ. ⲛⲣ.</span> opp <span class="coptic">ϣⲏⲣⲉ ϣⲏⲙ</span>,</li>
-																<li><i>ib</i> 199 sim,</li>
-																<li>BHom 122 <i class="dialect">S</i> youth &amp; elder <span class="coptic">ⲃⲣⲣⲉ ϩⲓⲛ. ⲛⲣ.</span>,</li>
-																<li>Bor 134 4 <i class="dialect">S</i> (Vita Sinuth) <span class="coptic">ⲁϥⲣ ⲛ. ⲛⲣ.</span> = C 41 34 <i class="dialect">B</i> <span class="coptic">ⲉⲣ ϧⲉⲗⲗⲟ ⲛⲣ.</span>,</li>
-																<li>MG 25 256 <i class="dialect">B</i> was actor by trade <span class="coptic">ϣⲁⲧⲉϥⲉⲣ ⲛ. ⲛⲣ.</span></li>
+																<li>RNC 8 <i class="dialect">S</i> <span class="coptic">ⲡⲛ. ϩⲓⲗⲗⲁⲣⲓⲱⲛ</span>,</li>
+																<li>P 129<sup>14</sup> 131 <i class="dialect">S</i> <span class="coptic">ⲡⲛ. ⲇⲓⲟⲛⲩⲥⲓⲟⲥ</span> = AM 271 <i class="dialect">B</i> <span class="coptic">ⲇ. ⲡⲓⲛⲓϣϯ</span> <span class="greek">ὁ μέγας</span>,</li>
+																<li>Gu 68 <i class="dialect">S</i> <span class="coptic">ⲧⲛ. ⲁⲣⲧⲉⲙⲓⲥ</span> <span class="greek">ἡ μ.</span>,</li>
+																<li>BIF 13 116 <i class="dialect">S</i> <span class="coptic">ⲡⲛ. ⲁⲡⲁ ⲙⲁⲕⲁⲣⲉ</span> = MG 25 307 <i class="dialect">B</i>.</li>
 															</ul>
 														</li>
 													</ul>
 												</li>
-												<li class="subsection"><b>b</b>, as title, <i>elder</i>, <i>notable</i> (<i>v</i> CO 119 n, Ep 1 131):
+											</ul>
+										</li>
+										<li class="subsection"><b>III</b> after nn, both with art <i class="dialect">S</i><i class="dialect">B</i>:
+											<ul>
+												<li class="group">
 													<ul>
-														<li class="group">
-															<ul>
-																<li>Est A 1 <i class="dialect">S</i> <span class="greek">ἄνθρωπος μέγ.</span>;</li>
-															</ul>
-														</li>
-														<li class="group">
-															<ul>
-																<li>Ac 13 50 <i class="dialect">S</i> (<i class="dialect">B</i> <span class="coptic">ϩⲟⲩⲁϯ</span>) <span class="greek">πρῶτος</span>;</li>
-															</ul>
-														</li>
-														<li class="group">
-															<ul>
-																<li>Z 340 <i class="dialect">S</i> <span class="greek">ἀββᾶ</span>;</li>
-															</ul>
-														</li>
-														<li class="group">
-															<ul>
-																<li>Leyd 163 <i class="dialect">S</i> festival of <span class="coptic">ⲡⲛ. ⲛⲣ. ⲙⲛⲡⲇⲉⲩⲧⲉⲗⲁⲣⲓⲟⲥ</span> (<span class="greek">δευτερ.</span>),</li>
-																<li>Wess 9 79 <i class="dialect">S</i> <span class="coptic">ⲛⲛ. ⲛⲣ.</span> <i>sc</i> archbishops &amp; archimandrites,</li>
-																<li>BAp 107 <i class="dialect">S</i> <span class="coptic">ⲡⲛ. ⲛⲣ.</span> <i>sc</i> bishop = MIE 2 383 <i class="dialect">B</i> <span class="coptic">ⲡⲓϧⲉⲗⲗⲟ</span>,</li>
-																<li>Miss 4 245 <i class="dialect">S</i> <span class="coptic">ⲡⲛ. ⲛⲣ.</span> <i>sc</i> Shenoute,</li>
-																<li>C 41 22 <i class="dialect">B</i> do,</li>
-																<li>BM 601 <i class="dialect">F</i> <span class="coptic">ⲡⲛ. ⲛⲗ.</span> <i>sc</i> abbot,</li>
-																<li>RE 9 149 <i class="dialect">S</i> <span class="coptic">ⲛⲛ. ⲛⲣ.</span> opp <span class="coptic">ⲛⲕⲗⲏⲣⲓⲕⲟⲥ</span>,</li>
-																<li>J 36 35 <i class="dialect">S</i> lashanes &amp; <span class="coptic">ϩⲉⲛⲕⲉⲛ. ⲛⲣ.</span>,</li>
-																<li>MMA 24 6 4 <i class="dialect">S</i> <span class="coptic">ⲛⲛⲁⲕ ⲛⲣ. ⲙⲡⲧⲓⲙⲉ</span>,</li>
-																<li>ST 300 <i class="dialect">S</i> sim,</li>
-																<li>CO 342 <i class="dialect">S</i> <span class="coptic">ⲛⲁⲡⲏⲩⲉ ⲙⲛ(ⲛ)ⲛ. ⲛⲣ.</span>,</li>
-																<li>Mor 41 19 <i class="dialect">S</i> <span class="coptic">ⲛ. ⲛⲣ.</span> = DeV 2 270 <i class="dialect">B</i> <span class="coptic">ⲣ. ⲛⲣⲁⲙⲁⲟ</span>.</li>
-																<li>(<i>Cf</i> <span class="greek">μεγάλοι τῆς μονῆς</span> <i>Vita Pachom</i> § 35, <span class="greek">μέγ.</span> of ascetes Usener <i>Theodos.</i> 107, <span class="greek">μέγ. ἀνήρ</span> anchorite PG 42 192, <span class="greek">ὁ μέγ.</span> <i>sc</i> Antony <i>Hist Laus</i> 65).</li>
-															</ul>
-														</li>
-													</ul>
-												</li>
-												<li class="subsection"><span class="coptic">ⲙⲛⲧⲛ. ⲛⲣ.</span> <i class="dialect">S</i>, <i>old age</i>:
-													<ul>
-														<li class="group">
-															<ul>
-																<li>ShC 73 49 <span class="coptic">ⲧⲉⲛⲙ. ⲏ ⲧ(ⲉ)ⲛⲙⲛⲧⲃⲣⲣⲉ</span>,</li>
-																<li>ShA 1 108 <span class="coptic">ⲧⲉⲛⲙ. ⲏ ⲧⲉⲛϩⲁⲏ</span>,</li>
-																<li>PSBA 32 200 spare thyself in thy <span class="coptic">ⲙ. ⲛⲣ.</span></li>
-															</ul>
-														</li>
-													</ul>
-												</li>
-												<li class="subsection"><span class="coptic">ⲛ. ⲛⲥϩⲓⲙⲉ</span> <i class="dialect">S</i>, <i>elder</i>, <i>aged woman</i>:
-													<ul>
-														<li class="group">
-															<ul>
-																<li>1 Tim 5 2 (<i class="dialect">B</i> <span class="coptic">ϧⲉⲗⲗⲱ</span>) <span class="greek">πρεσβυτέρα</span>;</li>
-															</ul>
-														</li>
-														<li class="group">
-															<ul>
-																<li>ShC 73 74 <span class="coptic">ⲛ. ⲛⲥ.</span> opp <span class="coptic">ϣⲉⲉⲣⲉ ϣⲏⲙ</span>,</li>
-																<li><i>ib</i> 62 <span class="coptic">ⲑⲗⲗⲱ</span> (abbess) <span class="coptic">ⲙⲛⲕⲉⲥⲟ ⲛⲛ. ⲛⲥ.</span> that are aged (<i>cf</i> CDan 26 <span class="greek">ἡ μεγάλη</span>).</li>
-															</ul>
-														</li>
-													</ul>
-												</li>
-												<li class="subsection"><span class="coptic">ⲛ. ⲛϣⲏⲣⲉ</span> <i class="dialect">S</i><i class="dialect">B</i>, <i>elder son</i>:
-													<ul>
-														<li class="group">
-															<ul>
-																<li>Lu 15 25 <i class="dialect">S</i><i class="dialect">B</i> <span class="greek">πρεσβύτερος</span>;</li>
-															</ul>
-														</li>
-														<li class="group">
-															<ul>
-																<li>BAp 83 <i class="dialect">S</i> Esau her <span class="coptic">ⲛ. ⲛϣ.</span>,</li>
-																<li>DeV 2 90 <i class="dialect">B</i> Joachaz <span class="coptic">ⲡⲓⲛ. ⲛϣ.</span> of Josiah;</li>
-															</ul>
-														</li>
-													</ul>
-												</li>
-												<li class="subsection">as monastic title (<i>cf</i> <span class="coptic">ⲛ. ⲛⲣⲱⲙⲉ</span>, <span class="coptic">ⲛⲥⲟⲛ</span>):
-													<ul>
-														<li class="group">
-															<ul>
-																<li>C 41 54 <i class="dialect">B</i> convoked <span class="coptic">ⲛⲓⲛ. ⲛϣ.</span> &amp; superintendants of monastery,</li>
-															</ul>
-														</li>
+														<li>Ex 23 31 <i class="dialect">B</i> <span class="coptic">ⲫⲓⲁⲣⲟ ⲡⲓⲛⲟϭ</span> (<i class="dialect">S</i> <span class="coptic">ⲡⲛ. ⲛⲉⲓⲉⲣⲟ</span>) <span class="greek">μέγ. ποτ.</span>,</li>
 													</ul>
 												</li>
 											</ul>
@@ -1920,8 +1984,6 @@
 							</ul>
 						</li>
 					</ul>
-				</li>
-			</ul>
 		</div>
 	</body>
 </html>
